apply `black` formatting everywhere

--- a/notebooks/document-chunking/_nbtest.teardown.with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/_nbtest.teardown.with-index-pipelines.ipynb
@@ -19,7 +19,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -47,7 +47,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    client.ml.delete_trained_model(model_id=\"sentence-transformers__all-minilm-l6-v2\", force=True)\n",
+    "    client.ml.delete_trained_model(\n",
+    "        model_id=\"sentence-transformers__all-minilm-l6-v2\", force=True\n",
+    "    )\n",
     "except:\n",
     "    pass"
    ]
