--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -103,7 +103,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -208,13 +208,13 @@
     "CHUNK_SIZE = 400\n",
     "\n",
     "client.ingest.put_pipeline(\n",
-    "  id=\"chunk_text_to_passages\",\n",
-    "  processors=[\n",
-    "    {\n",
-    "      \"script\": {\n",
-    "        \"description\": \"Chunk body_content into sentences by looking for . followed by a space\",\n",
-    "        \"lang\": \"painless\",\n",
-    "        \"source\": \"\"\"\n",
+    "    id=\"chunk_text_to_passages\",\n",
+    "    processors=[\n",
+    "        {\n",
+    "            \"script\": {\n",
+    "                \"description\": \"Chunk body_content into sentences by looking for . followed by a space\",\n",
+    "                \"lang\": \"painless\",\n",
+    "                \"source\": \"\"\"\n",
     "          String[] envSplit = /((?<!M(r|s|rs)\\.)(?<=\\.) |(?<=\\!) |(?<=\\?) )/.split(ctx['text']);\n",
     "          ctx['passages'] = new ArrayList();\n",
     "          int i = 0;\n",
@@ -232,40 +232,36 @@
     "            }\n",
     "          }\n",
     "          \"\"\",\n",
-    "        \"params\": {\n",
-    "          \"model_limit\": CHUNK_SIZE\n",
-    "        }\n",
-    "      }\n",
-    "    },\n",
-    "    {\n",
-    "      \"foreach\": {\n",
-    "        \"field\": \"passages\",\n",
-    "        \"processor\": {\n",
-    "          \"inference\": {\n",
-    "            \"field_map\": {\n",
-    "              \"_ingest._value.text\": \"text_field\"\n",
-    "            },\n",
-    "            \"model_id\": MODEL_ID,\n",
-    "            \"target_field\": \"_ingest._value.vector\",\n",
-    "            \"on_failure\": [\n",
-    "              {\n",
-    "                \"append\": {\n",
-    "                  \"field\": \"_source._ingest.inference_errors\",\n",
-    "                  \"value\": [\n",
-    "                    {\n",
-    "                      \"message\": \"Processor 'inference' in pipeline 'ml-inference-title-vector' failed with message '{{ _ingest.on_failure_message }}'\",\n",
-    "                      \"pipeline\": \"ml-inference-title-vector\",\n",
-    "                      \"timestamp\": \"{{{ _ingest.timestamp }}}\"\n",
+    "                \"params\": {\"model_limit\": CHUNK_SIZE},\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"foreach\": {\n",
+    "                \"field\": \"passages\",\n",
+    "                \"processor\": {\n",
+    "                    \"inference\": {\n",
+    "                        \"field_map\": {\"_ingest._value.text\": \"text_field\"},\n",
+    "                        \"model_id\": MODEL_ID,\n",
+    "                        \"target_field\": \"_ingest._value.vector\",\n",
+    "                        \"on_failure\": [\n",
+    "                            {\n",
+    "                                \"append\": {\n",
+    "                                    \"field\": \"_source._ingest.inference_errors\",\n",
+    "                                    \"value\": [\n",
+    "                                        {\n",
+    "                                            \"message\": \"Processor 'inference' in pipeline 'ml-inference-title-vector' failed with message '{{ _ingest.on_failure_message }}'\",\n",
+    "                                            \"pipeline\": \"ml-inference-title-vector\",\n",
+    "                                            \"timestamp\": \"{{{ _ingest.timestamp }}}\",\n",
+    "                                        }\n",
+    "                                    ],\n",
+    "                                }\n",
+    "                            }\n",
+    "                        ],\n",
     "                    }\n",
-    "                  ]\n",
-    "                }\n",
-    "              }\n",
-    "            ]\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "                },\n",
+    "            }\n",
+    "        },\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -302,37 +298,32 @@
     }
    ],
    "source": [
-    "\n",
     "INDEX_NAME = \"chunk_passages_example\"\n",
     "\n",
     "# Setup the index\n",
-    "client.indices.create( \n",
-    "  index=INDEX_NAME, \n",
-    "  settings={\n",
-    "    \"index\": {\n",
-    "      \"default_pipeline\": \"chunk_text_to_passages\"\n",
-    "    }\n",
-    "  },\n",
-    "  mappings={\n",
-    "    \"dynamic\": \"true\",\n",
-    "    \"properties\": {\n",
-    "      \"passages\": {\n",
-    "        \"type\": \"nested\",\n",
+    "client.indices.create(\n",
+    "    index=INDEX_NAME,\n",
+    "    settings={\"index\": {\"default_pipeline\": \"chunk_text_to_passages\"}},\n",
+    "    mappings={\n",
+    "        \"dynamic\": \"true\",\n",
     "        \"properties\": {\n",
-    "          \"vector\": {\n",
-    "            \"properties\": {\n",
-    "              \"predicted_value\": {\n",
-    "                \"type\": \"dense_vector\",\n",
-    "                \"index\": True,\n",
-    "                \"dims\": 384,\n",
-    "                \"similarity\": \"dot_product\"\n",
-    "              }\n",
+    "            \"passages\": {\n",
+    "                \"type\": \"nested\",\n",
+    "                \"properties\": {\n",
+    "                    \"vector\": {\n",
+    "                        \"properties\": {\n",
+    "                            \"predicted_value\": {\n",
+    "                                \"type\": \"dense_vector\",\n",
+    "                                \"index\": True,\n",
+    "                                \"dims\": 384,\n",
+    "                                \"similarity\": \"dot_product\",\n",
+    "                            }\n",
+    "                        }\n",
+    "                    }\n",
+    "                },\n",
     "            }\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
+    "        },\n",
+    "    },\n",
     ")"
    ]
   },
@@ -365,19 +356,15 @@
     "docs = json.loads(urlopen(url).read())\n",
     "\n",
     "operations = [\n",
-    "    {\n",
-    "      \"_index\": INDEX_NAME,\n",
-    "      \"_id\": i,\n",
-    "      \"text\": doc[\"content\"],\n",
-    "      \"name\": doc[\"name\"]\n",
-    "    } for i, doc in enumerate(docs)\n",
+    "    {\"_index\": INDEX_NAME, \"_id\": i, \"text\": doc[\"content\"], \"name\": doc[\"name\"]}\n",
+    "    for i, doc in enumerate(docs)\n",
     "]\n",
     "\n",
     "# Add the documents to the index directly\n",
     "response = helpers.bulk(\n",
-    "  client,\n",
-    "  operations,\n",
-    "  refresh=True,\n",
+    "    client,\n",
+    "    operations,\n",
+    "    refresh=True,\n",
     ")"
    ]
   },
@@ -404,19 +391,19 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
-    "        for hit in response['hits']['hits']:\n",
-    "            id = hit['_id']\n",
-    "            score = hit['_score']\n",
-    "            doc_title = hit['_source']['name']\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            doc_title = hit[\"_source\"][\"name\"]\n",
     "            passage_text = \"\"\n",
     "\n",
-    "            for passage in hit['inner_hits']['passages']['hits']['hits']:\n",
-    "                passage_text += passage[\"fields\"][\"passages\"][0]['text'][0] + \"\\n\\n\"\n",
+    "            for passage in hit[\"inner_hits\"][\"passages\"][\"hits\"][\"hits\"]:\n",
+    "                passage_text += passage[\"fields\"][\"passages\"][0][\"text\"][0] + \"\\n\\n\"\n",
     "\n",
-    "            pretty_output = (f\"\\nID: {id}\\nDoc Title: {doc_title}\\nPassage Text:\\n{passage_text}\\nScore: {score}\\n\")\n",
+    "            pretty_output = f\"\\nID: {id}\\nDoc Title: {doc_title}\\nPassage Text:\\n{passage_text}\\nScore: {score}\\n\"\n",
     "            print(pretty_output)\n",
     "            print(\"---\")"
    ]
@@ -500,25 +487,19 @@
    ],
    "source": [
     "response = client.search(\n",
-    "  index=INDEX_NAME,\n",
-    "  knn={\n",
-    "    \"inner_hits\": {\n",
-    "      \"size\": 1,\n",
-    "      \"_source\": False,\n",
-    "      \"fields\": [\n",
-    "        \"passages.text\"\n",
-    "      ]\n",
+    "    index=INDEX_NAME,\n",
+    "    knn={\n",
+    "        \"inner_hits\": {\"size\": 1, \"_source\": False, \"fields\": [\"passages.text\"]},\n",
+    "        \"field\": \"passages.vector.predicted_value\",\n",
+    "        \"k\": 3,\n",
+    "        \"num_candidates\": 100,\n",
+    "        \"query_vector_builder\": {\n",
+    "            \"text_embedding\": {\n",
+    "                \"model_id\": MODEL_ID,\n",
+    "                \"model_text\": \"Whats the work from home policy?\",\n",
+    "            }\n",
+    "        },\n",
     "    },\n",
-    "    \"field\": \"passages.vector.predicted_value\",\n",
-    "    \"k\": 3,\n",
-    "    \"num_candidates\": 100,\n",
-    "    \"query_vector_builder\": {\n",
-    "      \"text_embedding\": {\n",
-    "        \"model_id\": MODEL_ID,\n",
-    "        \"model_text\": \"Whats the work from home policy?\"\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
     ")\n",
     "\n",
     "pretty_response(response)"
