--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -51,7 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from getpass import getpass\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
@@ -96,8 +95,8 @@
     "response = urlopen(url)\n",
     "data = json.load(response)\n",
     "\n",
-    "with open('temp.json', 'w') as json_file:\n",
-    "    json.dump(data, json_file)\n"
+    "with open(\"temp.json\", \"w\") as json_file:\n",
+    "    json.dump(data, json_file)"
    ]
   },
   {
@@ -106,7 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.document_loaders import JSONLoader \n",
+    "from langchain.document_loaders import JSONLoader\n",
+    "\n",
     "\n",
     "def metadata_func(record: dict, metadata: dict) -> dict:\n",
     "    metadata[\"name\"] = record.get(\"name\")\n",
@@ -116,6 +116,7 @@
     "    metadata[\"updated_at\"] = record.get(\"updated_at\")\n",
     "\n",
     "    return metadata\n",
+    "\n",
     "\n",
     "# For more loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/\n",
     "# And 3rd party loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/#third-party-loaders\n",
@@ -186,67 +187,61 @@
     "\n",
     "# Create the pipeline\n",
     "client.ingest.put_pipeline(\n",
-    "  id=PIPELINE_ID, \n",
-    "  processors=[\n",
-    "    {\n",
-    "      \"foreach\": {\n",
-    "        \"field\": \"passages\",\n",
-    "        \"processor\": {\n",
-    "          \"inference\": {\n",
-    "            \"field_map\": {\n",
-    "              \"_ingest._value.text\": \"text_field\"\n",
-    "            },\n",
-    "            \"model_id\": MODEL_ID,\n",
-    "            \"target_field\": \"_ingest._value.vector\",\n",
-    "            \"on_failure\": [\n",
-    "              {\n",
-    "                \"append\": {\n",
-    "                  \"field\": \"_source._ingest.inference_errors\",\n",
-    "                  \"value\": [\n",
-    "                    {\n",
-    "                      \"message\": \"Processor 'inference' in pipeline 'ml-inference-title-vector' failed with message '{{ _ingest.on_failure_message }}'\",\n",
-    "                      \"pipeline\": \"ml-inference-title-vector\",\n",
-    "                      \"timestamp\": \"{{{ _ingest.timestamp }}}\"\n",
+    "    id=PIPELINE_ID,\n",
+    "    processors=[\n",
+    "        {\n",
+    "            \"foreach\": {\n",
+    "                \"field\": \"passages\",\n",
+    "                \"processor\": {\n",
+    "                    \"inference\": {\n",
+    "                        \"field_map\": {\"_ingest._value.text\": \"text_field\"},\n",
+    "                        \"model_id\": MODEL_ID,\n",
+    "                        \"target_field\": \"_ingest._value.vector\",\n",
+    "                        \"on_failure\": [\n",
+    "                            {\n",
+    "                                \"append\": {\n",
+    "                                    \"field\": \"_source._ingest.inference_errors\",\n",
+    "                                    \"value\": [\n",
+    "                                        {\n",
+    "                                            \"message\": \"Processor 'inference' in pipeline 'ml-inference-title-vector' failed with message '{{ _ingest.on_failure_message }}'\",\n",
+    "                                            \"pipeline\": \"ml-inference-title-vector\",\n",
+    "                                            \"timestamp\": \"{{{ _ingest.timestamp }}}\",\n",
+    "                                        }\n",
+    "                                    ],\n",
+    "                                }\n",
+    "                            }\n",
+    "                        ],\n",
     "                    }\n",
-    "                  ]\n",
-    "                }\n",
-    "              }\n",
-    "            ]\n",
-    "          }\n",
+    "                },\n",
+    "            }\n",
     "        }\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "    ],\n",
     ")\n",
     "\n",
     "# Create the index\n",
-    "client.indices.create( \n",
-    "  index=INDEX_NAME, \n",
-    "  settings={\n",
-    "    \"index\": {\n",
-    "      \"default_pipeline\": PIPELINE_ID\n",
-    "    }\n",
-    "  },\n",
-    "  mappings={\n",
-    "    \"dynamic\": \"true\",\n",
-    "    \"properties\": {\n",
-    "      \"passages\": {\n",
-    "        \"type\": \"nested\",\n",
+    "client.indices.create(\n",
+    "    index=INDEX_NAME,\n",
+    "    settings={\"index\": {\"default_pipeline\": PIPELINE_ID}},\n",
+    "    mappings={\n",
+    "        \"dynamic\": \"true\",\n",
     "        \"properties\": {\n",
-    "          \"vector\": {\n",
-    "            \"properties\": {\n",
-    "              \"predicted_value\": {\n",
-    "                \"type\": \"dense_vector\",\n",
-    "                \"index\": True,\n",
-    "                \"dims\": MODEL_DIMS,\n",
-    "                \"similarity\": \"dot_product\"\n",
-    "              }\n",
+    "            \"passages\": {\n",
+    "                \"type\": \"nested\",\n",
+    "                \"properties\": {\n",
+    "                    \"vector\": {\n",
+    "                        \"properties\": {\n",
+    "                            \"predicted_value\": {\n",
+    "                                \"type\": \"dense_vector\",\n",
+    "                                \"index\": True,\n",
+    "                                \"dims\": MODEL_DIMS,\n",
+    "                                \"similarity\": \"dot_product\",\n",
+    "                            }\n",
+    "                        }\n",
+    "                    }\n",
+    "                },\n",
     "            }\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
+    "        },\n",
+    "    },\n",
     ")"
    ]
   },
@@ -268,27 +263,30 @@
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
+    "\n",
     "def parent_child_splitter(documents, chunk_size: int = 200):\n",
     "\n",
-    "  child_splitter = RecursiveCharacterTextSplitter(chunk_size=chunk_size)\n",
+    "    child_splitter = RecursiveCharacterTextSplitter(chunk_size=chunk_size)\n",
     "\n",
-    "  docs = []\n",
-    "  for i, doc in enumerate(documents):\n",
-    "    passages = []\n",
+    "    docs = []\n",
+    "    for i, doc in enumerate(documents):\n",
+    "        passages = []\n",
     "\n",
-    "    for _doc in child_splitter.split_documents([doc]):\n",
-    "        passages.append({\n",
-    "            \"text\": _doc.page_content,\n",
-    "        })\n",
+    "        for _doc in child_splitter.split_documents([doc]):\n",
+    "            passages.append(\n",
+    "                {\n",
+    "                    \"text\": _doc.page_content,\n",
+    "                }\n",
+    "            )\n",
     "\n",
-    "    doc = {\n",
-    "        \"content\": doc.page_content,\n",
-    "        \"metadata\": doc.metadata,\n",
-    "        \"passages\": passages\n",
-    "    }\n",
-    "    docs.append(doc)\n",
-    "    \n",
-    "  return docs\n"
+    "        doc = {\n",
+    "            \"content\": doc.page_content,\n",
+    "            \"metadata\": doc.metadata,\n",
+    "            \"passages\": passages,\n",
+    "        }\n",
+    "        docs.append(doc)\n",
+    "\n",
+    "    return docs"
    ]
   },
   {
@@ -306,26 +304,26 @@
    "outputs": [],
    "source": [
     "def pretty_response(response, show_parent_text=False):\n",
-    "  if len(response['hits']['hits']) == 0:\n",
-    "      print('Your search returned no results.')\n",
-    "  else:\n",
-    "    for hit in response['hits']['hits']:\n",
-    "      id = hit['_id']\n",
-    "      score = hit['_score']\n",
-    "      doc_title = hit['_source'][\"metadata\"]['name']\n",
-    "      parent_text = \"\"\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
+    "    else:\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            doc_title = hit[\"_source\"][\"metadata\"][\"name\"]\n",
+    "            parent_text = \"\"\n",
     "\n",
-    "      if show_parent_text:\n",
-    "          parent_text = hit['_source'][\"content\"]\n",
+    "            if show_parent_text:\n",
+    "                parent_text = hit[\"_source\"][\"content\"]\n",
     "\n",
-    "      passage_text = \"\"\n",
+    "            passage_text = \"\"\n",
     "\n",
-    "      for passage in hit['inner_hits']['passages']['hits']['hits']:\n",
-    "          passage_text += passage[\"fields\"][\"passages\"][0]['text'][0] + \"\\n\\n\"\n",
+    "            for passage in hit[\"inner_hits\"][\"passages\"][\"hits\"][\"hits\"]:\n",
+    "                passage_text += passage[\"fields\"][\"passages\"][0][\"text\"][0] + \"\\n\\n\"\n",
     "\n",
-    "      pretty_output = (f\"\\nID: {id}\\nDoc Title: {doc_title}\\nparent text:\\n{parent_text}\\nPassage Text:\\n{passage_text}\\nScore: {score}\\n\")\n",
-    "      print(pretty_output)\n",
-    "      print(\"---\")"
+    "            pretty_output = f\"\\nID: {id}\\nDoc Title: {doc_title}\\nparent text:\\n{parent_text}\\nPassage Text:\\n{passage_text}\\nScore: {score}\\n\"\n",
+    "            print(pretty_output)\n",
+    "            print(\"---\")"
    ]
   },
   {
@@ -360,15 +358,12 @@
     "\n",
     "chunked_docs = parent_child_splitter(loader.load(), chunk_size=600)\n",
     "\n",
-    "count, errors = helpers.bulk(\n",
-    "  client, \n",
-    "  chunked_docs,\n",
-    "  index=INDEX_NAME\n",
-    ")\n",
+    "count, errors = helpers.bulk(client, chunked_docs, index=INDEX_NAME)\n",
     "\n",
     "print(f\"Indexed {count} documents with {errors} errors\")\n",
     "\n",
     "import time\n",
+    "\n",
     "time.sleep(5)"
    ]
   },
@@ -475,25 +470,19 @@
    ],
    "source": [
     "response = client.search(\n",
-    "  index=INDEX_NAME, \n",
-    "  knn={\n",
-    "    \"inner_hits\": {\n",
-    "      \"size\": 1,\n",
-    "      \"_source\": False,\n",
-    "      \"fields\": [\n",
-    "        \"passages.text\"\n",
-    "      ]\n",
+    "    index=INDEX_NAME,\n",
+    "    knn={\n",
+    "        \"inner_hits\": {\"size\": 1, \"_source\": False, \"fields\": [\"passages.text\"]},\n",
+    "        \"field\": \"passages.vector.predicted_value\",\n",
+    "        \"k\": 5,\n",
+    "        \"num_candidates\": 100,\n",
+    "        \"query_vector_builder\": {\n",
+    "            \"text_embedding\": {\n",
+    "                \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "                \"model_text\": \"Whats the work from home policy?\",\n",
+    "            }\n",
+    "        },\n",
     "    },\n",
-    "    \"field\": \"passages.vector.predicted_value\",\n",
-    "    \"k\": 5,\n",
-    "    \"num_candidates\": 100,\n",
-    "    \"query_vector_builder\": {\n",
-    "      \"text_embedding\": {\n",
-    "        \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
-    "        \"model_text\": \"Whats the work from home policy?\"\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
     ")\n",
     "\n",
     "pretty_response(response)"
@@ -559,42 +548,41 @@
     }
    ],
    "source": [
-    "from langchain.vectorstores.elasticsearch import ElasticsearchStore, ApproxRetrievalStrategy\n",
+    "from langchain.vectorstores.elasticsearch import (\n",
+    "    ElasticsearchStore,\n",
+    "    ApproxRetrievalStrategy,\n",
+    ")\n",
     "from typing import List, Union\n",
     "from langchain_core.documents import Document\n",
+    "\n",
     "\n",
     "class CustomRetrievalStrategy(ApproxRetrievalStrategy):\n",
     "\n",
     "    def query(\n",
-    "      self,\n",
-    "      query: Union[str, None],\n",
-    "      filter: List[dict],\n",
-    "      **kwargs,\n",
+    "        self,\n",
+    "        query: Union[str, None],\n",
+    "        filter: List[dict],\n",
+    "        **kwargs,\n",
     "    ):\n",
-    "                \n",
-    "      es_query = {\n",
-    "        \"knn\": {\n",
-    "          \"inner_hits\": {\n",
-    "              \"_source\": False,\n",
-    "              \"fields\": [\n",
-    "                  \"passages.text\"\n",
-    "              ]\n",
-    "          },\n",
-    "          \"field\": \"passages.vector.predicted_value\",\n",
-    "          \"filter\": filter,\n",
-    "          \"k\": 5,\n",
-    "          \"num_candidates\": 100,\n",
-    "          \"query_vector_builder\": {\n",
-    "            \"text_embedding\": {\n",
-    "              \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
-    "              \"model_text\": query\n",
-    "            }\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
     "\n",
-    "      return es_query\n",
-    "    \n",
+    "        es_query = {\n",
+    "            \"knn\": {\n",
+    "                \"inner_hits\": {\"_source\": False, \"fields\": [\"passages.text\"]},\n",
+    "                \"field\": \"passages.vector.predicted_value\",\n",
+    "                \"filter\": filter,\n",
+    "                \"k\": 5,\n",
+    "                \"num_candidates\": 100,\n",
+    "                \"query_vector_builder\": {\n",
+    "                    \"text_embedding\": {\n",
+    "                        \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "                        \"model_text\": query,\n",
+    "                    }\n",
+    "                },\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        return es_query\n",
+    "\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
     "    index_name=INDEX_NAME,\n",
@@ -603,22 +591,28 @@
     "    strategy=CustomRetrievalStrategy(),\n",
     ")\n",
     "\n",
+    "\n",
     "def doc_builder(hit):\n",
-    "  passage_hits = hit.get(\"inner_hits\", {}).get(\"passages\", {}).get(\"hits\", {}).get(\"hits\", [])\n",
-    "  page_content = \"\"\n",
-    "  for passage_hit in passage_hits:\n",
-    "    passage_fields = passage_hit.get(\"fields\", {}).get(\"passages\", [])[0]\n",
-    "    page_content += passage_fields.get(\"text\", [])[0] + \"\\n\\n\"\n",
-    "\n",
-    "    return Document(\n",
-    "      page_content=page_content,\n",
-    "      metadata=hit[\"_source\"][\"metadata\"],\n",
+    "    passage_hits = (\n",
+    "        hit.get(\"inner_hits\", {}).get(\"passages\", {}).get(\"hits\", {}).get(\"hits\", [])\n",
     "    )\n",
+    "    page_content = \"\"\n",
+    "    for passage_hit in passage_hits:\n",
+    "        passage_fields = passage_hit.get(\"fields\", {}).get(\"passages\", [])[0]\n",
+    "        page_content += passage_fields.get(\"text\", [])[0] + \"\\n\\n\"\n",
     "\n",
-    "results = vector_store.similarity_search(query=\"Whats the work from home policy?\", doc_builder=doc_builder)\n",
+    "        return Document(\n",
+    "            page_content=page_content,\n",
+    "            metadata=hit[\"_source\"][\"metadata\"],\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "results = vector_store.similarity_search(\n",
+    "    query=\"Whats the work from home policy?\", doc_builder=doc_builder\n",
+    ")\n",
     "for result in results:\n",
     "    print(f'Doc title: {result.metadata[\"name\"]}')\n",
-    "    print(f'Text:\\n{result.page_content}')"
+    "    print(f\"Text:\\n{result.page_content}\")"
    ]
   },
   {
