--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -171,10 +171,7 @@
     "\n",
     "for doc in workplace_docs:\n",
     "    content.append(doc[\"content\"])\n",
-    "    metadata.append({\n",
-    "        \"name\": doc[\"name\"],\n",
-    "        \"summary\": doc[\"summary\"]\n",
-    "    })\n",
+    "    metadata.append({\"name\": doc[\"name\"], \"summary\": doc[\"summary\"]})\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
     "    chunk_size=512,\n",
@@ -205,10 +202,10 @@
     "\n",
     "vector_store = ElasticsearchStore.from_documents(\n",
     "    docs,\n",
-    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=\"workplace-docs\",\n",
-    "    embedding=embeddings\n",
+    "    embedding=embeddings,\n",
     ")"
    ]
   },
@@ -238,9 +235,7 @@
     "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "chat = ConversationalRetrievalChain.from_llm(\n",
-    "    llm=llm,\n",
-    "    retriever=retriever,\n",
-    "    return_source_documents=True\n",
+    "    llm=llm, retriever=retriever, return_source_documents=True\n",
     ")\n",
     "\n",
     "session_id = str(uuid4())\n",
@@ -248,7 +243,7 @@
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    session_id=session_id,\n",
-    "    index=\"workplace-docs-chat-history\"\n",
+    "    index=\"workplace-docs-chat-history\",\n",
     ")"
    ]
   },
@@ -287,11 +282,14 @@
     "# Define a convenience function for Q&A\n",
     "def ask(question, chat_history):\n",
     "    result = chat({\"question\": question, \"chat_history\": chat_history.messages})\n",
-    "    print(f\"\"\"[QUESTION] {question}\n",
+    "    print(\n",
+    "        f\"\"\"[QUESTION] {question}\n",
     "[ANSWER]  {result[\"answer\"]}\n",
-    "          [SUPPORTING DOCUMENTS] {list(map(lambda d: d.metadata[\"name\"], list(result[\"source_documents\"])))}\"\"\")\n",
+    "          [SUPPORTING DOCUMENTS] {list(map(lambda d: d.metadata[\"name\"], list(result[\"source_documents\"])))}\"\"\"\n",
+    "    )\n",
     "    chat_history.add_user_message(result[\"question\"])\n",
     "    chat_history.add_ai_message(result[\"answer\"])\n",
+    "\n",
     "\n",
     "# Chat away!\n",
     "print(f\"[CHAT SESSION ID] {session_id}\")\n",
@@ -349,8 +347,8 @@
     }
    ],
    "source": [
-    "vector_store.client.indices.delete(index='workplace-docs')\n",
-    "vector_store.client.indices.delete(index='workplace-docs-chat-history')"
+    "vector_store.client.indices.delete(index=\"workplace-docs\")\n",
+    "vector_store.client.indices.delete(index=\"workplace-docs-chat-history\")"
    ]
   }
  ],
