--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -141,11 +141,13 @@
     "\n",
     "for doc in workplace_docs:\n",
     "    content.append(doc[\"content\"])\n",
-    "    metadata.append({\n",
-    "        \"name\": doc[\"name\"],\n",
-    "        \"summary\": doc[\"summary\"],\n",
-    "        \"rolePermissions\":doc[\"rolePermissions\"]\n",
-    "    })\n",
+    "    metadata.append(\n",
+    "        {\n",
+    "            \"name\": doc[\"name\"],\n",
+    "            \"summary\": doc[\"summary\"],\n",
+    "            \"rolePermissions\": doc[\"rolePermissions\"],\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "text_splitter = CharacterTextSplitter(chunk_size=50, chunk_overlap=0)\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
@@ -175,7 +177,7 @@
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=elastic_index_name,\n",
-    "    embedding=query_embedding\n",
+    "    embedding=query_embedding,\n",
     ")"
    ]
   },
@@ -202,7 +204,7 @@
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    embedding=query_embedding,\n",
-    "    index_name=elastic_index_name\n",
+    "    index_name=elastic_index_name,\n",
     ")\n",
     "\n",
     "retriever = es.as_retriever(search_kwargs={\"k\": 3})"
@@ -252,9 +254,9 @@
     "\n",
     "\n",
     "chain = (\n",
-    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()} \n",
-    "    | prompt \n",
-    "    | ChatGoogleGenerativeAI(model=\"gemini-pro\", temperature=0.7) \n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | ChatGoogleGenerativeAI(model=\"gemini-pro\", temperature=0.7)\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
