--- a/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
+++ b/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
@@ -60,10 +60,10 @@
     "from elasticsearch import Elasticsearch, helpers\n",
     "from getpass import getpass\n",
     "\n",
-    "GOOGLE_API_KEY=getpass(\"Google API Key :\")\n",
-    "ELASTIC_API_KEY=getpass(\"Elastic API Key :\")\n",
-    "ELASTIC_CLOUD_ID=getpass(\"Elastic Cloud ID :\")\n",
-    "elastic_index_name='gemini-demo'"
+    "GOOGLE_API_KEY = getpass(\"Google API Key :\")\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic API Key :\")\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID :\")\n",
+    "elastic_index_name = \"gemini-demo\""
    ]
   },
   {
@@ -85,13 +85,12 @@
     "genai.configure(api_key=GOOGLE_API_KEY)\n",
     "\n",
     "title = \"Climate in India\"\n",
-    "sample_text = (\"India generally experiences a hot summer from March to June, with temperatures often exceeding 40°C in central and northern regions. Monsoon season, from June to September, brings heavy rainfall, especially in the western coast and northeastern areas. Post-monsoon months, October and November, mark a transition with decreasing rainfall. Winter, from December to February, varies in temperature across the country, with colder conditions in the north and milder weather in the south. India's diverse climate is influenced by its geographical features, resulting in regional \")\n",
+    "sample_text = \"India generally experiences a hot summer from March to June, with temperatures often exceeding 40°C in central and northern regions. Monsoon season, from June to September, brings heavy rainfall, especially in the western coast and northeastern areas. Post-monsoon months, October and November, mark a transition with decreasing rainfall. Winter, from December to February, varies in temperature across the country, with colder conditions in the north and milder weather in the south. India's diverse climate is influenced by its geographical features, resulting in regional \"\n",
     "\n",
-    "model = 'models/embedding-001'\n",
-    "embedding = genai.embed_content(model=model,\n",
-    "                                content=sample_text,\n",
-    "                                task_type=\"retrieval_document\",\n",
-    "                                title=title)\n"
+    "model = \"models/embedding-001\"\n",
+    "embedding = genai.embed_content(\n",
+    "    model=model, content=sample_text, task_type=\"retrieval_document\", title=title\n",
+    ")"
    ]
   },
   {
@@ -109,10 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "es = Elasticsearch(\n",
-    "  cloud_id = ELASTIC_CLOUD_ID,\n",
-    "  api_key= ELASTIC_API_KEY\n",
-    ")"
+    "es = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY)"
    ]
   },
   {
@@ -130,10 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = {\n",
-    "    'text' : sample_text,\n",
-    "    'text_embedding' : embedding['embedding'] \n",
-    "}\n",
+    "doc = {\"text\": sample_text, \"text_embedding\": embedding[\"embedding\"]}\n",
     "\n",
     "resp = es.index(index=elastic_index_name, document=doc)\n",
     "\n",
@@ -157,23 +150,21 @@
    "source": [
     "q = \"How's weather in India?\"\n",
     "\n",
-    "embedding = genai.embed_content(model=model,\n",
-    "                                content=q,\n",
-    "                                task_type=\"retrieval_query\")\n",
+    "embedding = genai.embed_content(model=model, content=q, task_type=\"retrieval_query\")\n",
     "\n",
     "resp = es.search(\n",
-    "  index = elastic_index_name,\n",
-    "  knn={\n",
-    "      \"field\": \"text_embedding\",\n",
-    "      \"query_vector\":  embedding['embedding'],\n",
-    "      \"k\": 10,\n",
-    "      \"num_candidates\": 100\n",
-    "    }\n",
+    "    index=elastic_index_name,\n",
+    "    knn={\n",
+    "        \"field\": \"text_embedding\",\n",
+    "        \"query_vector\": embedding[\"embedding\"],\n",
+    "        \"k\": 10,\n",
+    "        \"num_candidates\": 100,\n",
+    "    },\n",
     ")\n",
     "\n",
     "\n",
-    "for result in resp['hits']['hits']:\n",
-    "    pretty_output = (f\"\\n\\nID: {result['_id']}\\n\\nText: {result['_source']['text']}\\n\\nEmbedding: {result['_source']['text_embedding']}\")\n",
+    "for result in resp[\"hits\"][\"hits\"]:\n",
+    "    pretty_output = f\"\\n\\nID: {result['_id']}\\n\\nText: {result['_source']['text']}\\n\\nEmbedding: {result['_source']['text_embedding']}\"\n",
     "    print(pretty_output)"
    ]
   }
