--- a/notebooks/integrations/hugging-face/_nbtest.teardown.loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/_nbtest.teardown.loading-model-from-hugging-face.ipynb
@@ -13,7 +13,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)\n",
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")\n",
     "\n",
     "# delete the notebook's index\n",
     "client.indices.delete(index=\"blogs\", ignore_unavailable=True)\n",
@@ -26,7 +29,9 @@
     "\n",
     "# delete the model\n",
     "try:\n",
-    "    client.ml.delete_trained_model(model_id=\"sentence-transformers__all-minilm-l6-v2\", force=True)\n",
+    "    client.ml.delete_trained_model(\n",
+    "        model_id=\"sentence-transformers__all-minilm-l6-v2\", force=True\n",
+    "    )\n",
     "except:\n",
     "    pass"
    ]
