--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -141,12 +141,10 @@
    "outputs": [],
    "source": [
     "es = Elasticsearch(\n",
-    "  cloud_id=ELASTIC_CLOUD_ID,\n",
-    "  api_key=ELASTIC_API_KEY,\n",
-    "  request_timeout=600\n",
+    "    cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY, request_timeout=600\n",
     ")\n",
     "\n",
-    "es.info() # should return cluster info"
+    "es.info()  # should return cluster info"
    ]
   },
   {
@@ -175,17 +173,20 @@
    "outputs": [],
    "source": [
     "# ingest pipeline definition\n",
-    "PIPELINE_ID=\"vectorize_blogs\"\n",
+    "PIPELINE_ID = \"vectorize_blogs\"\n",
     "\n",
-    "es.ingest.put_pipeline(id=PIPELINE_ID, processors=[{\n",
-    "        \"inference\": {\n",
-    "          \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
-    "          \"target_field\": \"text_embedding\",\n",
-    "          \"field_map\": {\n",
-    "            \"title\": \"text_field\"\n",
-    "          }\n",
+    "es.ingest.put_pipeline(\n",
+    "    id=PIPELINE_ID,\n",
+    "    processors=[\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "                \"target_field\": \"text_embedding\",\n",
+    "                \"field_map\": {\"title\": \"text_field\"},\n",
+    "            }\n",
     "        }\n",
-    "      }])"
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -213,66 +214,54 @@
    "outputs": [],
    "source": [
     "# define index name\n",
-    "INDEX_NAME=\"blogs\"\n",
+    "INDEX_NAME = \"blogs\"\n",
     "\n",
     "# flag to check if index has to be deleted before creating\n",
-    "SHOULD_DELETE_INDEX=True\n",
+    "SHOULD_DELETE_INDEX = True\n",
     "\n",
     "# define index mapping\n",
     "INDEX_MAPPING = {\n",
     "    \"properties\": {\n",
-    "      \"title\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
-    "        }\n",
-    "      },\n",
-    "      \n",
-    "      \"text_embedding\": {\n",
-    "        \"properties\": {\n",
-    "          \"is_truncated\": {\n",
-    "            \"type\": \"boolean\"\n",
-    "          },\n",
-    "          \"model_id\": {\n",
+    "        \"title\": {\n",
     "            \"type\": \"text\",\n",
-    "            \"fields\": {\n",
-    "              \"keyword\": {\n",
-    "                \"type\": \"keyword\",\n",
-    "                \"ignore_above\": 256\n",
-    "              }\n",
+    "            \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "        },\n",
+    "        \"text_embedding\": {\n",
+    "            \"properties\": {\n",
+    "                \"is_truncated\": {\"type\": \"boolean\"},\n",
+    "                \"model_id\": {\n",
+    "                    \"type\": \"text\",\n",
+    "                    \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "                },\n",
+    "                \"predicted_value\": {\n",
+    "                    \"type\": \"dense_vector\",\n",
+    "                    \"dims\": 384,\n",
+    "                    \"index\": True,\n",
+    "                    \"similarity\": \"l2_norm\",\n",
+    "                },\n",
     "            }\n",
-    "          },\n",
-    "          \"predicted_value\": {\n",
-    "            \"type\": \"dense_vector\",\n",
-    "            \"dims\": 384,\n",
-    "            \"index\": True,\n",
-    "            \"similarity\": \"l2_norm\"\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
+    "        },\n",
     "    }\n",
-    "  }\n",
+    "}\n",
     "\n",
     "INDEX_SETTINGS = {\n",
     "    \"index\": {\n",
-    "      \"number_of_replicas\": \"1\",\n",
-    "      \"number_of_shards\": \"1\",\n",
-    "      \"default_pipeline\": PIPELINE_ID\n",
+    "        \"number_of_replicas\": \"1\",\n",
+    "        \"number_of_shards\": \"1\",\n",
+    "        \"default_pipeline\": PIPELINE_ID,\n",
     "    }\n",
     "}\n",
     "\n",
     "# check if we want to delete index before creating the index\n",
-    "if(SHOULD_DELETE_INDEX):\n",
-    "  if es.indices.exists(index=INDEX_NAME):\n",
-    "    print(\"Deleting existing %s\" % INDEX_NAME)\n",
-    "    es.indices.delete(index=INDEX_NAME, ignore=[400, 404])\n",
+    "if SHOULD_DELETE_INDEX:\n",
+    "    if es.indices.exists(index=INDEX_NAME):\n",
+    "        print(\"Deleting existing %s\" % INDEX_NAME)\n",
+    "        es.indices.delete(index=INDEX_NAME, ignore=[400, 404])\n",
     "\n",
     "print(\"Creating index %s\" % INDEX_NAME)\n",
-    "es.indices.create(index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS,\n",
-    "                  ignore=[400, 404])\n"
+    "es.indices.create(\n",
+    "    index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS, ignore=[400, 404]\n",
+    ")"
    ]
   },
   {
@@ -370,32 +359,31 @@
     }
    ],
    "source": [
-    "INDEX_NAME=\"blogs\"\n",
+    "INDEX_NAME = \"blogs\"\n",
     "\n",
-    "source_fields = [ \"id\", \"title\"]\n",
+    "source_fields = [\"id\", \"title\"]\n",
     "\n",
     "query = {\n",
-    "  \"field\": \"text_embedding.predicted_value\",\n",
-    "  \"k\": 10,\n",
-    "  \"num_candidates\": 50,\n",
-    "  \"query_vector_builder\": {\n",
-    "    \"text_embedding\": {\"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
-    "      \"model_text\": \"how to track network connections\"\n",
-    "    }\n",
-    "  }\n",
+    "    \"field\": \"text_embedding.predicted_value\",\n",
+    "    \"k\": 10,\n",
+    "    \"num_candidates\": 50,\n",
+    "    \"query_vector_builder\": {\n",
+    "        \"text_embedding\": {\n",
+    "            \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "            \"model_text\": \"how to track network connections\",\n",
+    "        }\n",
+    "    },\n",
     "}\n",
     "\n",
-    "response = es.search(\n",
-    "    index=INDEX_NAME,\n",
-    "    fields=source_fields,\n",
-    "    knn=query,\n",
-    "    source=False)\n",
+    "response = es.search(index=INDEX_NAME, fields=source_fields, knn=query, source=False)\n",
+    "\n",
     "\n",
     "def show_results(results):\n",
     "    for result in results:\n",
     "        print(f'{result[\"fields\"][\"title\"]}\\nScore: {result[\"_score\"]}\\n')\n",
-    "        \n",
-    "show_results(response.body['hits']['hits'])"
+    "\n",
+    "\n",
+    "show_results(response.body[\"hits\"][\"hits\"])"
    ]
   },
   {
