--- a/notebooks/integrations/openai/openai-KNN-RAG.ipynb
+++ b/notebooks/integrations/openai/openai-KNN-RAG.ipynb
@@ -76,17 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(\n",
-    "  cloud_id = ELASTIC_CLOUD_ID,\n",
-    "  api_key=ELASTIC_API_KEY\n",
-    ")\n",
+    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY)\n",
     "\n",
     "# Test connection to Elasticsearch\n",
     "print(client.info())"
@@ -109,11 +105,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings_url = 'https://cdn.openai.com/API/examples/data/vector_database_wikipedia_articles_embedded.zip'\n",
+    "embeddings_url = \"https://cdn.openai.com/API/examples/data/vector_database_wikipedia_articles_embedded.zip\"\n",
     "wget.download(embeddings_url)\n",
     "\n",
-    "with zipfile.ZipFile(\"vector_database_wikipedia_articles_embedded.zip\",\n",
-    "\"r\") as zip_ref:\n",
+    "with zipfile.ZipFile(\"vector_database_wikipedia_articles_embedded.zip\", \"r\") as zip_ref:\n",
     "    zip_ref.extractall(\"data\")"
    ]
   },
@@ -134,8 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "wikipedia_dataframe = pd.read_csv(\"data/vector_database_wikipedia_articles_embedded.csv\")"
+    "wikipedia_dataframe = pd.read_csv(\n",
+    "    \"data/vector_database_wikipedia_articles_embedded.csv\"\n",
+    ")"
    ]
   },
   {
@@ -159,25 +155,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_mapping= {\n",
+    "index_mapping = {\n",
     "    \"properties\": {\n",
-    "      \"title_vector\": {\n",
-    "          \"type\": \"dense_vector\",\n",
-    "          \"dims\": 1536,\n",
-    "          \"index\": \"true\",\n",
-    "          \"similarity\": \"cosine\"\n",
-    "      },\n",
-    "      \"content_vector\": {\n",
-    "          \"type\": \"dense_vector\",\n",
-    "          \"dims\": 1536,\n",
-    "          \"index\": \"true\",\n",
-    "          \"similarity\": \"cosine\"\n",
-    "      },\n",
-    "      \"text\": {\"type\": \"text\"},\n",
-    "      \"title\": {\"type\": \"text\"},\n",
-    "      \"url\": { \"type\": \"keyword\"},\n",
-    "      \"vector_id\": {\"type\": \"long\"}\n",
-    "      \n",
+    "        \"title_vector\": {\n",
+    "            \"type\": \"dense_vector\",\n",
+    "            \"dims\": 1536,\n",
+    "            \"index\": \"true\",\n",
+    "            \"similarity\": \"cosine\",\n",
+    "        },\n",
+    "        \"content_vector\": {\n",
+    "            \"type\": \"dense_vector\",\n",
+    "            \"dims\": 1536,\n",
+    "            \"index\": \"true\",\n",
+    "            \"similarity\": \"cosine\",\n",
+    "        },\n",
+    "        \"text\": {\"type\": \"text\"},\n",
+    "        \"title\": {\"type\": \"text\"},\n",
+    "        \"url\": {\"type\": \"keyword\"},\n",
+    "        \"vector_id\": {\"type\": \"long\"},\n",
     "    }\n",
     "}\n",
     "client.indices.create(index=\"wikipedia_vector_index\", mappings=index_mapping)"
@@ -205,16 +200,16 @@
     "def dataframe_to_bulk_actions(df):\n",
     "    for index, row in df.iterrows():\n",
     "        yield {\n",
-    "            \"_index\": 'wikipedia_vector_index',\n",
-    "            \"_id\": row['id'],\n",
+    "            \"_index\": \"wikipedia_vector_index\",\n",
+    "            \"_id\": row[\"id\"],\n",
     "            \"_source\": {\n",
-    "                'url' : row[\"url\"],\n",
-    "                'title' : row[\"title\"],\n",
-    "                'text' : row[\"text\"],\n",
-    "                'title_vector' : json.loads(row[\"title_vector\"]),\n",
-    "                'content_vector' : json.loads(row[\"content_vector\"]),\n",
-    "                'vector_id' : row[\"vector_id\"]\n",
-    "            }\n",
+    "                \"url\": row[\"url\"],\n",
+    "                \"title\": row[\"title\"],\n",
+    "                \"text\": row[\"text\"],\n",
+    "                \"title_vector\": json.loads(row[\"title_vector\"]),\n",
+    "                \"content_vector\": json.loads(row[\"content_vector\"]),\n",
+    "                \"vector_id\": row[\"vector_id\"],\n",
+    "            },\n",
     "        }"
    ]
   },
@@ -258,13 +253,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(client.search(index=\"wikipedia_vector_index\", query={\n",
-    "    \"match\": {\n",
-    "      \"text\": {\n",
-    "        \"query\": \"Hummingbird\"\n",
-    "      }\n",
-    "    }\n",
-    "}))"
+    "print(\n",
+    "    client.search(\n",
+    "        index=\"wikipedia_vector_index\",\n",
+    "        query={\"match\": {\"text\": {\"query\": \"Hummingbird\"}}},\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -297,10 +291,10 @@
     "EMBEDDING_MODEL = \"text-embedding-ada-002\"\n",
     "\n",
     "# Define question\n",
-    "question = 'How big is the Atlantic ocean?'\n",
+    "question = \"How big is the Atlantic ocean?\"\n",
     "\n",
     "# Create embedding\n",
-    "question_embedding = openai.Embedding.create(input=question, model=EMBEDDING_MODEL)\n"
+    "question_embedding = openai.Embedding.create(input=question, model=EMBEDDING_MODEL)"
    ]
   },
   {
@@ -324,13 +318,14 @@
    "source": [
     "# Function to pretty print Elasticsearch results\n",
     "\n",
+    "\n",
     "def pretty_response(response):\n",
-    "    for hit in response['hits']['hits']:\n",
-    "        id = hit['_id']\n",
-    "        score = hit['_score']\n",
-    "        title = hit['_source']['title']\n",
-    "        text = hit['_source']['text']\n",
-    "        pretty_output = (f\"\\nID: {id}\\nTitle: {title}\\nSummary: {text}\\nScore: {score}\")\n",
+    "    for hit in response[\"hits\"][\"hits\"]:\n",
+    "        id = hit[\"_id\"]\n",
+    "        score = hit[\"_score\"]\n",
+    "        title = hit[\"_source\"][\"title\"]\n",
+    "        text = hit[\"_source\"][\"text\"]\n",
+    "        pretty_output = f\"\\nID: {id}\\nTitle: {title}\\nSummary: {text}\\nScore: {score}\"\n",
     "        print(pretty_output)"
    ]
   },
@@ -350,16 +345,18 @@
    "outputs": [],
    "source": [
     "response = client.search(\n",
-    "  index = \"wikipedia_vector_index\",\n",
-    "  knn={\n",
-    "      \"field\": \"content_vector\",\n",
-    "      \"query_vector\":  question_embedding[\"data\"][0][\"embedding\"],\n",
-    "      \"k\": 10,\n",
-    "      \"num_candidates\": 100\n",
-    "    }\n",
+    "    index=\"wikipedia_vector_index\",\n",
+    "    knn={\n",
+    "        \"field\": \"content_vector\",\n",
+    "        \"query_vector\": question_embedding[\"data\"][0][\"embedding\"],\n",
+    "        \"k\": 10,\n",
+    "        \"num_candidates\": 100,\n",
+    "    },\n",
     ")\n",
     "pretty_response(response)\n",
-    "top_hit_summary = response['hits']['hits'][0]['_source']['text'] # Store content of top hit for final step"
+    "top_hit_summary = response[\"hits\"][\"hits\"][0][\"_source\"][\n",
+    "    \"text\"\n",
+    "]  # Store content of top hit for final step"
    ]
   },
   {
@@ -396,14 +393,17 @@
    "outputs": [],
    "source": [
     "summary = openai.ChatCompletion.create(\n",
-    "  model=\"gpt-3.5-turbo\",\n",
-    "  messages=[\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Answer the following question:\" \n",
-    "         + question \n",
-    "         + \"by using the following text:\" \n",
-    "         + top_hit_summary},\n",
-    "    ]\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"Answer the following question:\"\n",
+    "            + question\n",
+    "            + \"by using the following text:\"\n",
+    "            + top_hit_summary,\n",
+    "        },\n",
+    "    ],\n",
     ")\n",
     "\n",
     "choices = summary.choices\n",
