--- a/notebooks/langchain/langchain-using-own-model.ipynb
+++ b/notebooks/langchain/langchain-using-own-model.ipynb
@@ -68,13 +68,15 @@
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
-    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "    es_api_key=ELASTIC_API_KEY, \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
     "    query_field=\"text_field\",\n",
     "    vector_query_field=\"vector_query_field.predicted_value\",\n",
-    "    index_name= \"approx-search-demo\",\n",
-    "    strategy=ElasticsearchStore.ApproxRetrievalStrategy(query_model_id=\"sentence-transformers__all-minilm-l6-v2\")\n",
-    ")\n"
+    "    index_name=\"approx-search-demo\",\n",
+    "    strategy=ElasticsearchStore.ApproxRetrievalStrategy(\n",
+    "        query_model_id=\"sentence-transformers__all-minilm-l6-v2\"\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -118,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"  \n",
+    "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/chatbot-rag-app/data/data.json\"\n",
     "response = urlopen(url)\n",
     "\n",
     "workplace_docs = json.loads(response.read())"
@@ -152,17 +154,20 @@
     }
    ],
    "source": [
-    "PIPELINE_ID=\"vectorize_workplace\"\n",
+    "PIPELINE_ID = \"vectorize_workplace\"\n",
     "\n",
-    "vector_store.client.ingest.put_pipeline(id=PIPELINE_ID, processors=[{\n",
-    "        \"inference\": {\n",
-    "          \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
-    "          \"field_map\": {\n",
-    "            \"query_field\": \"text_field\"\n",
-    "          },\n",
-    "            \"target_field\": \"vector_query_field\",\n",
+    "vector_store.client.ingest.put_pipeline(\n",
+    "    id=PIPELINE_ID,\n",
+    "    processors=[\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "                \"field_map\": {\"query_field\": \"text_field\"},\n",
+    "                \"target_field\": \"vector_query_field\",\n",
+    "            }\n",
     "        }\n",
-    "      }])"
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -188,41 +193,40 @@
    "outputs": [],
    "source": [
     "# define index name\n",
-    "INDEX_NAME=\"approx-search-demo\"\n",
+    "INDEX_NAME = \"approx-search-demo\"\n",
     "\n",
     "# flag to check if index has to be deleted before creating\n",
-    "SHOULD_DELETE_INDEX=True\n",
+    "SHOULD_DELETE_INDEX = True\n",
     "\n",
     "# define index mapping\n",
     "INDEX_MAPPING = {\n",
     "    \"properties\": {\n",
-    "      \"text_field\": {\"type\": \"text\"},\n",
-    "      \"vector_query_field\": {\n",
-    "        \"properties\": {\n",
-    "          \"is_truncated\": {\n",
-    "            \"type\": \"boolean\"\n",
-    "          },\n",
-    "          \"predicted_value\": {\n",
-    "            \"type\": \"dense_vector\",\n",
-    "            \"dims\": 384,\n",
-    "            \"index\": True,\n",
-    "            \"similarity\": \"l2_norm\"\n",
-    "          }\n",
-    "        }\n",
-    "      }\n",
+    "        \"text_field\": {\"type\": \"text\"},\n",
+    "        \"vector_query_field\": {\n",
+    "            \"properties\": {\n",
+    "                \"is_truncated\": {\"type\": \"boolean\"},\n",
+    "                \"predicted_value\": {\n",
+    "                    \"type\": \"dense_vector\",\n",
+    "                    \"dims\": 384,\n",
+    "                    \"index\": True,\n",
+    "                    \"similarity\": \"l2_norm\",\n",
+    "                },\n",
+    "            }\n",
+    "        },\n",
     "    }\n",
-    "  }\n",
+    "}\n",
     "\n",
     "\n",
-    "INDEX_SETTINGS = {\"index\": { \"default_pipeline\": PIPELINE_ID}}\n",
+    "INDEX_SETTINGS = {\"index\": {\"default_pipeline\": PIPELINE_ID}}\n",
     "\n",
     "# check if we want to delete index before creating the index\n",
-    "if(SHOULD_DELETE_INDEX):\n",
-    "  if vector_store.client.indices.exists(index=INDEX_NAME):\n",
-    "    vector_store.client.indices.delete(index=INDEX_NAME, ignore=[400, 404])\n",
+    "if SHOULD_DELETE_INDEX:\n",
+    "    if vector_store.client.indices.exists(index=INDEX_NAME):\n",
+    "        vector_store.client.indices.delete(index=INDEX_NAME, ignore=[400, 404])\n",
     "\n",
-    "vector_store.client.indices.create(index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS,\n",
-    "                  ignore=[400, 404])\n"
+    "vector_store.client.indices.create(\n",
+    "    index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS, ignore=[400, 404]\n",
+    ")"
    ]
   },
   {
@@ -245,13 +249,12 @@
     "\n",
     "# data.json\n",
     "for doc in workplace_docs:\n",
-    "  content.append(doc[\"content\"])\n",
-    "  metadata.append({\n",
-    "      \"name\": doc[\"name\"],\n",
-    "      \"summary\": doc[\"summary\"]\n",
-    "  })\n",
+    "    content.append(doc[\"content\"])\n",
+    "    metadata.append({\"name\": doc[\"name\"], \"summary\": doc[\"summary\"]})\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=512, chunk_overlap=256\n",
+    ")\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
    ]
   },
@@ -275,11 +278,15 @@
    "outputs": [],
    "source": [
     "documents = ElasticsearchStore.from_documents(\n",
-    "    docs, es_cloud_id=ELASTIC_CLOUD_ID, es_api_key=ELASTIC_API_KEY,   \n",
-    "    index_name= \"approx-search-demo\",\n",
+    "    docs,\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    "    index_name=\"approx-search-demo\",\n",
     "    query_field=\"text_field\",\n",
     "    vector_query_field=\"vector_query_field.predicted_value\",\n",
-    "    strategy=ElasticsearchStore.ApproxRetrievalStrategy(query_model_id=\"sentence-transformers__all-minilm-l6-v2\")\n",
+    "    strategy=ElasticsearchStore.ApproxRetrievalStrategy(\n",
+    "        query_model_id=\"sentence-transformers__all-minilm-l6-v2\"\n",
+    "    ),\n",
     ")"
    ]
   },
