--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -63,7 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
@@ -71,9 +70,9 @@
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
-    "  es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "  es_api_key=ELASTIC_API_KEY,\n",
-    "  index_name= \"workplace_index\",\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    "    index_name=\"workplace_index\",\n",
     ")"
    ]
   },
@@ -119,14 +118,18 @@
     "content = []\n",
     "\n",
     "for doc in workplace_docs:\n",
-    "  content.append(doc[\"content\"])\n",
-    "  metadata.append({\n",
-    "      \"name\": doc[\"name\"],\n",
-    "      \"summary\": doc[\"summary\"],\n",
-    "      \"rolePermissions\":doc[\"rolePermissions\"]\n",
-    "  })\n",
+    "    content.append(doc[\"content\"])\n",
+    "    metadata.append(\n",
+    "        {\n",
+    "            \"name\": doc[\"name\"],\n",
+    "            \"summary\": doc[\"summary\"],\n",
+    "            \"rolePermissions\": doc[\"rolePermissions\"],\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=512, chunk_overlap=256\n",
+    ")\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
    ]
   },
@@ -150,14 +153,16 @@
    "outputs": [],
    "source": [
     "documents = vector_store.from_documents(\n",
-    "    docs, \n",
+    "    docs,\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=\"workplace_index\",\n",
-    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(model_id=\".elser_model_2\"),\n",
+    "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(\n",
+    "        model_id=\".elser_model_2\"\n",
+    "    ),\n",
     "    bulk_kwargs={\n",
     "        \"request_timeout\": 60,\n",
-    "    }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -176,9 +181,9 @@
    "outputs": [],
    "source": [
     "def showResults(output):\n",
-    "  print(\"Total results: \", len(output))\n",
-    "  for index in range(len(output)):\n",
-    "    print(output[index])"
+    "    print(\"Total results: \", len(output))\n",
+    "    for index in range(len(output)):\n",
+    "        print(output[index])"
    ]
   },
   {
@@ -275,7 +280,10 @@
     }
    ],
    "source": [
-    "results = documents.similarity_search(\"How does the compensation work\", filter=[{ 'match': { \"metadata.rolePermissions\": \"manager\" }}])\n",
+    "results = documents.similarity_search(\n",
+    "    \"How does the compensation work\",\n",
+    "    filter=[{\"match\": {\"metadata.rolePermissions\": \"manager\"}}],\n",
+    ")\n",
     "showResults(results)"
    ]
   },
