--- a/notebooks/langchain/langchain-vector-store.ipynb
+++ b/notebooks/langchain/langchain-vector-store.ipynb
@@ -56,7 +56,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#finding-your-cloud-id\n",
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "\n",
@@ -69,11 +68,11 @@
     "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
-    "  es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "  es_api_key=ELASTIC_API_KEY,\n",
-    "  index_name= \"workplace_index\", \n",
-    "  embedding=embeddings\n",
-    ")\n"
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    "    index_name=\"workplace_index\",\n",
+    "    embedding=embeddings,\n",
+    ")"
    ]
   },
   {
@@ -118,14 +117,18 @@
     "content = []\n",
     "\n",
     "for doc in workplace_docs:\n",
-    "  content.append(doc[\"content\"])\n",
-    "  metadata.append({\n",
-    "      \"name\": doc[\"name\"],\n",
-    "      \"summary\": doc[\"summary\"],\n",
-    "      \"rolePermissions\":doc[\"rolePermissions\"],\n",
-    "  })\n",
+    "    content.append(doc[\"content\"])\n",
+    "    metadata.append(\n",
+    "        {\n",
+    "            \"name\": doc[\"name\"],\n",
+    "            \"summary\": doc[\"summary\"],\n",
+    "            \"rolePermissions\": doc[\"rolePermissions\"],\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=512, chunk_overlap=256\n",
+    ")\n",
     "docs = text_splitter.create_documents(content, metadatas=metadata)"
    ]
   },
@@ -147,11 +150,11 @@
    "outputs": [],
    "source": [
     "documents = vector_store.from_documents(\n",
-    "    docs, \n",
-    "    embeddings, \n",
+    "    docs,\n",
+    "    embeddings,\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
-    "    index_name=\"workplace_index\"\n",
+    "    index_name=\"workplace_index\",\n",
     ")"
    ]
   },
@@ -170,9 +173,9 @@
    "outputs": [],
    "source": [
     "def showResults(output):\n",
-    "  print(\"Total results: \", len(output))\n",
-    "  for index in range(len(output)):\n",
-    "    print(output[index])"
+    "    print(\"Total results: \", len(output))\n",
+    "    for index in range(len(output)):\n",
+    "        print(output[index])"
    ]
   },
   {
@@ -275,9 +278,11 @@
    ],
    "source": [
     "query = \"How does the compensation work?\"\n",
-    "results = documents.similarity_search(query, filter=[{ 'match': { \"metadata.rolePermissions\": \"manager\" }}])\n",
+    "results = documents.similarity_search(\n",
+    "    query, filter=[{\"match\": {\"metadata.rolePermissions\": \"manager\"}}]\n",
+    ")\n",
     "\n",
-    "showResults(results)\n"
+    "showResults(results)"
    ]
   }
  ],
