--- a/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/chatbot-with-multi-query-retriever.ipynb
@@ -77,10 +77,10 @@
     "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "vectorstore = ElasticsearchStore(\n",
-    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
     "    es_api_key=ELASTIC_API_KEY,\n",
     "    index_name=\"chatbot-multi-query-demo\",\n",
-    "    embedding= embeddings,\n",
+    "    embedding=embeddings,\n",
     ")"
    ]
   },
@@ -106,7 +106,7 @@
     "response = urlopen(url)\n",
     "data = json.load(response)\n",
     "\n",
-    "with open('temp.json', 'w') as json_file:\n",
+    "with open(\"temp.json\", \"w\") as json_file:\n",
     "    json.dump(data, json_file)"
    ]
   },
@@ -129,8 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.document_loaders import JSONLoader \n",
+    "from langchain.document_loaders import JSONLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
     "\n",
     "def metadata_func(record: dict, metadata: dict) -> dict:\n",
     "    metadata[\"name\"] = record.get(\"name\")\n",
@@ -141,6 +142,7 @@
     "\n",
     "    return metadata\n",
     "\n",
+    "\n",
     "# For more loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/\n",
     "# And 3rd party loaders https://python.langchain.com/docs/modules/data_connection/document_loaders/#third-party-loaders\n",
     "loader = JSONLoader(\n",
@@ -150,7 +152,9 @@
     "    metadata_func=metadata_func,\n",
     ")\n",
     "\n",
-    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=512, chunk_overlap=256)\n",
+    "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    chunk_size=512, chunk_overlap=256\n",
+    ")\n",
     "docs = loader.load_and_split(text_splitter=text_splitter)"
    ]
   },
@@ -172,11 +176,11 @@
    "outputs": [],
    "source": [
     "documents = vectorstore.from_documents(\n",
-    "    docs, \n",
-    "    embeddings,  \n",
+    "    docs,\n",
+    "    embeddings,\n",
     "    index_name=\"chatbot-multi-query-demo\",\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
-    "    es_api_key=ELASTIC_API_KEY\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
     ")\n",
     "\n",
     "llm = OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
@@ -233,12 +237,15 @@
     "    \"\"\"\n",
     ")\n",
     "\n",
-    "LLM_DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "LLM_DOCUMENT_PROMPT = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
     "---\n",
     "SOURCE: {name}\n",
     "{page_content}\n",
     "---\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def _combine_documents(\n",
     "    docs, document_prompt=LLM_DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
@@ -246,12 +253,13 @@
     "    doc_strings = [format_document(doc, document_prompt) for doc in docs]\n",
     "    return document_separator.join(doc_strings)\n",
     "\n",
+    "\n",
     "_context = RunnableParallel(\n",
     "    context=retriever | _combine_documents,\n",
     "    question=RunnablePassthrough(),\n",
     ")\n",
     "\n",
-    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "chain = _context | LLM_CONTEXT_PROMPT | llm\n",
     "\n",
     "ans = chain.invoke(\"what is the nasa sales team?\")\n",
     "\n",
