--- a/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
@@ -66,11 +66,11 @@
     "    Document(\n",
     "        page_content=\"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
     "        metadata={\n",
-    "            \"year\": 1993, \n",
-    "            \"rating\": 7.7, \n",
-    "            \"genre\": \"science fiction\", \n",
-    "            \"director\": \"Steven Spielberg\", \n",
-    "            \"title\": \"Jurassic Park\"\n",
+    "            \"year\": 1993,\n",
+    "            \"rating\": 7.7,\n",
+    "            \"genre\": \"science fiction\",\n",
+    "            \"director\": \"Steven Spielberg\",\n",
+    "            \"title\": \"Jurassic Park\",\n",
     "        },\n",
     "    ),\n",
     "    Document(\n",
@@ -79,35 +79,35 @@
     "            \"year\": 2010,\n",
     "            \"director\": \"Christopher Nolan\",\n",
     "            \"rating\": 8.2,\n",
-    "            \"title\": \"Inception\"\n",
+    "            \"title\": \"Inception\",\n",
     "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
     "        metadata={\n",
-    "            \"year\": 2006, \n",
-    "            \"director\": \"Satoshi Kon\", \n",
-    "            \"rating\": 8.6, \n",
-    "            \"title\": \"Paprika\"\n",
+    "            \"year\": 2006,\n",
+    "            \"director\": \"Satoshi Kon\",\n",
+    "            \"rating\": 8.6,\n",
+    "            \"title\": \"Paprika\",\n",
     "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
     "        metadata={\n",
-    "            \"year\": 2019, \n",
-    "            \"director\": \"Greta Gerwig\", \n",
-    "            \"rating\": 8.3, \n",
-    "            \"title\": \"Little Women\"\n",
+    "            \"year\": 2019,\n",
+    "            \"director\": \"Greta Gerwig\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Little Women\",\n",
     "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Toys come alive and have a blast doing so\",\n",
     "        metadata={\n",
     "            \"year\": 1995,\n",
-    "            \"genre\": \"animated\", \n",
-    "            \"director\": \"John Lasseter\", \n",
-    "            \"rating\": 8.3, \n",
-    "            \"title\": \"Toy Story\"\n",
+    "            \"genre\": \"animated\",\n",
+    "            \"director\": \"John Lasseter\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Toy Story\",\n",
     "        },\n",
     "    ),\n",
     "    Document(\n",
@@ -160,7 +160,7 @@
     "    embeddings,\n",
     "    index_name=\"elasticsearch-multi-query-demo\",\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
-    "    es_api_key=ELASTIC_API_KEY\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
     ")"
    ]
   },
