--- a/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-example.ipynb
@@ -67,23 +67,50 @@
     "docs = [\n",
     "    Document(\n",
     "        page_content=\"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
-    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\", \"director\": \"Steven Spielberg\", \"title\": \"Jurassic Park\"},\n",
+    "        metadata={\n",
+    "            \"year\": 1993,\n",
+    "            \"rating\": 7.7,\n",
+    "            \"genre\": \"science fiction\",\n",
+    "            \"director\": \"Steven Spielberg\",\n",
+    "            \"title\": \"Jurassic Park\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Leo DiCaprio gets lost in a dream within a dream within a dream within a ...\",\n",
-    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2, \"title\": \"Inception\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2010,\n",
+    "            \"director\": \"Christopher Nolan\",\n",
+    "            \"rating\": 8.2,\n",
+    "            \"title\": \"Inception\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
-    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6, \"title\": \"Paprika\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2006,\n",
+    "            \"director\": \"Satoshi Kon\",\n",
+    "            \"rating\": 8.6,\n",
+    "            \"title\": \"Paprika\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
-    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3, \"title\": \"Little Women\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2019,\n",
+    "            \"director\": \"Greta Gerwig\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Little Women\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Toys come alive and have a blast doing so\",\n",
-    "        metadata={\"year\": 1995, \"genre\": \"animated\", \"director\": \"John Lasseter\", \"rating\": 8.3, \"title\": \"Toy Story\"},\n",
+    "        metadata={\n",
+    "            \"year\": 1995,\n",
+    "            \"genre\": \"animated\",\n",
+    "            \"director\": \"John Lasseter\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Toy Story\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Three men walk into the Zone, three men walk out of the Zone\",\n",
@@ -132,12 +159,12 @@
     "\n",
     "\n",
     "vectorstore = ElasticsearchStore.from_documents(\n",
-    "    docs, \n",
-    "    embeddings, \n",
-    "    index_name=\"elasticsearch-self-query-demo\", \n",
-    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "    es_api_key=ELASTIC_API_KEY\n",
-    ")\n"
+    "    docs,\n",
+    "    embeddings,\n",
+    "    index_name=\"elasticsearch-self-query-demo\",\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
@@ -187,7 +214,7 @@
     "# instantiate retriever\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -221,7 +248,8 @@
     "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
     "from langchain.schema import format_document\n",
     "\n",
-    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
+    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\n",
+    "    \"\"\"\n",
     "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
     "\n",
     "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
@@ -231,15 +259,19 @@
     "----\n",
     "Question: {question}\n",
     "Answer:\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "DOCUMENT_PROMPT = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
     "---\n",
     "title: {title}                                                                                   \n",
     "year: {year}  \n",
     "director: {director}    \n",
     "---\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def _combine_documents(\n",
     "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
@@ -253,9 +285,11 @@
     "    question=RunnablePassthrough(),\n",
     ")\n",
     "\n",
-    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "chain = _context | LLM_CONTEXT_PROMPT | llm\n",
     "\n",
-    "chain.invoke(\"What movies are about dreams and was released after the year 2007 but before 2012?\")"
+    "chain.invoke(\n",
+    "    \"What movies are about dreams and was released after the year 2007 but before 2012?\"\n",
+    ")"
    ]
   }
  ],
