--- a/notebooks/langchain/self-query-retriever-examples/chatbot-with-bm25-only-example.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/chatbot-with-bm25-only-example.ipynb
@@ -58,35 +58,62 @@
     "docs = [\n",
     "    {\n",
     "        \"text\": \"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
-    "        \"metadata\": {\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\", \"director\": \"Steven Spielberg\", \"title\": \"Jurassic Park\"},\n",
+    "        \"metadata\": {\n",
+    "            \"year\": 1993,\n",
+    "            \"rating\": 7.7,\n",
+    "            \"genre\": \"science fiction\",\n",
+    "            \"director\": \"Steven Spielberg\",\n",
+    "            \"title\": \"Jurassic Park\",\n",
+    "        },\n",
     "    },\n",
     "    {\n",
     "        \"text\": \"Leo DiCaprio gets lost in a dream within a dream within a dream within a ...\",\n",
-    "        \"metadata\": {\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2, \"title\": \"Inception\"},\n",
+    "        \"metadata\": {\n",
+    "            \"year\": 2010,\n",
+    "            \"director\": \"Christopher Nolan\",\n",
+    "            \"rating\": 8.2,\n",
+    "            \"title\": \"Inception\",\n",
+    "        },\n",
     "    },\n",
     "    {\n",
     "        \"text\": \"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
-    "        \"metadata\": {\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6, \"title\": \"Paprika\"},\n",
+    "        \"metadata\": {\n",
+    "            \"year\": 2006,\n",
+    "            \"director\": \"Satoshi Kon\",\n",
+    "            \"rating\": 8.6,\n",
+    "            \"title\": \"Paprika\",\n",
+    "        },\n",
     "    },\n",
     "    {\n",
-    "        \"text\":\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
-    "        \"metadata\":{\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3, \"title\": \"Little Women\"},\n",
+    "        \"text\": \"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
+    "        \"metadata\": {\n",
+    "            \"year\": 2019,\n",
+    "            \"director\": \"Greta Gerwig\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Little Women\",\n",
+    "        },\n",
     "    },\n",
     "    {\n",
-    "        \"text\":\"Toys come alive and have a blast doing so\",\n",
-    "        \"metadata\":{\"year\": 1995, \"genre\": \"animated\", \"director\": \"John Lasseter\", \"rating\": 8.3, \"title\": \"Toy Story\"},\n",
+    "        \"text\": \"Toys come alive and have a blast doing so\",\n",
+    "        \"metadata\": {\n",
+    "            \"year\": 1995,\n",
+    "            \"genre\": \"animated\",\n",
+    "            \"director\": \"John Lasseter\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Toy Story\",\n",
+    "        },\n",
     "    },\n",
     "    {\n",
-    "        \"text\":\"Three men walk into the Zone, three men walk out of the Zone\",\n",
-    "        \"metadata\":{\n",
+    "        \"text\": \"Three men walk into the Zone, three men walk out of the Zone\",\n",
+    "        \"metadata\": {\n",
     "            \"year\": 1979,\n",
     "            \"rating\": 9.9,\n",
     "            \"director\": \"Andrei Tarkovsky\",\n",
     "            \"genre\": \"science fiction\",\n",
     "            \"rating\": 9.9,\n",
     "            \"title\": \"Stalker\",\n",
-    "        }\n",
-    "    }\n",
+    "        },\n",
+    "    },\n",
     "]"
    ]
   },
@@ -123,8 +150,8 @@
     "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
     "\n",
     "client = Elasticsearch(\n",
-    "  cloud_id=ELASTIC_CLOUD_ID,\n",
-    "  api_key=ELASTIC_API_KEY,\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
     ")"
    ]
   },
@@ -150,17 +177,18 @@
     "\n",
     "operations = [\n",
     "    {\n",
-    "      \"_index\": \"movies_self_query\",\n",
-    "      \"_id\": i,\n",
-    "      \"text\": doc[\"text\"],\n",
-    "      \"metadata\": doc[\"metadata\"]\n",
-    "    } for i, doc in enumerate(docs)\n",
+    "        \"_index\": \"movies_self_query\",\n",
+    "        \"_id\": i,\n",
+    "        \"text\": doc[\"text\"],\n",
+    "        \"metadata\": doc[\"metadata\"],\n",
+    "    }\n",
+    "    for i, doc in enumerate(docs)\n",
     "]\n",
     "\n",
     "# Add the documents to the index directly\n",
     "response = helpers.bulk(\n",
-    "  client,\n",
-    "  operations,\n",
+    "    client,\n",
+    "    operations,\n",
     ")"
    ]
   },
@@ -215,11 +243,10 @@
     "# Set up openAI llm with sampling temperature 0\n",
     "llm = OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
     "\n",
+    "\n",
     "class BM25RetrievalStrategy(ApproxRetrievalStrategy):\n",
     "\n",
-    "    def __init__(\n",
-    "        self\n",
-    "    ):\n",
+    "    def __init__(self):\n",
     "        pass\n",
     "\n",
     "    def query(\n",
@@ -228,26 +255,22 @@
     "        filter: List[dict],\n",
     "        **kwargs,\n",
     "    ):\n",
-    "                \n",
+    "\n",
     "        if query:\n",
-    "            query_clause = [{\n",
-    "                \"multi_match\": {\n",
-    "                    \"query\": query,\n",
-    "                    \"fields\": [\"text\"],\n",
-    "                    \"fuzziness\": \"AUTO\",\n",
+    "            query_clause = [\n",
+    "                {\n",
+    "                    \"multi_match\": {\n",
+    "                        \"query\": query,\n",
+    "                        \"fields\": [\"text\"],\n",
+    "                        \"fuzziness\": \"AUTO\",\n",
+    "                    }\n",
     "                }\n",
-    "            }]\n",
+    "            ]\n",
     "        else:\n",
     "            query_clause = []\n",
     "\n",
-    "\n",
     "        bm25_query = {\n",
-    "            \"query\": {\n",
-    "                \"bool\": {\n",
-    "                    \"filter\": filter,\n",
-    "                    \"must\": query_clause\n",
-    "                }\n",
-    "            },\n",
+    "            \"query\": {\"bool\": {\"filter\": filter, \"must\": query_clause}},\n",
     "        }\n",
     "\n",
     "        print(\"query\", bm25_query)\n",
@@ -256,10 +279,10 @@
     "\n",
     "\n",
     "vectorstore = ElasticsearchStore(\n",
-    "  index_name=\"movies_self_query\",\n",
-    "  es_connection=client,\n",
-    "  strategy=BM25RetrievalStrategy()\n",
-    ")\n"
+    "    index_name=\"movies_self_query\",\n",
+    "    es_connection=client,\n",
+    "    strategy=BM25RetrievalStrategy(),\n",
+    ")"
    ]
   },
   {
@@ -304,14 +327,11 @@
     "from langchain.schema import format_document\n",
     "\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
-    "    llm, \n",
-    "    vectorstore, \n",
-    "    document_content_description, \n",
-    "    metadata_field_info, \n",
-    "    verbose=True\n",
+    "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
     ")\n",
     "\n",
-    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\"\"\"\n",
+    "LLM_CONTEXT_PROMPT = ChatPromptTemplate.from_template(\n",
+    "    \"\"\"\n",
     "Use the following context movies that matched the user question. Use the movies below only to answer the user's question.\n",
     "\n",
     "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
@@ -321,15 +341,19 @@
     "----\n",
     "Question: {question}\n",
     "Answer:\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "DOCUMENT_PROMPT = PromptTemplate.from_template(\"\"\"\n",
+    "DOCUMENT_PROMPT = PromptTemplate.from_template(\n",
+    "    \"\"\"\n",
     "---\n",
     "title: {title}                                                                                   \n",
     "year: {year}  \n",
     "director: {director}     \n",
     "---\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def _combine_documents(\n",
     "    docs, document_prompt=DOCUMENT_PROMPT, document_separator=\"\\n\\n\"\n",
@@ -344,9 +368,11 @@
     "    question=RunnablePassthrough(),\n",
     ")\n",
     "\n",
-    "chain = (_context | LLM_CONTEXT_PROMPT | llm)\n",
+    "chain = _context | LLM_CONTEXT_PROMPT | llm\n",
     "\n",
-    "chain.invoke(\"Which director directed movies about dinosaurs that was released after the year 1992 but before 2007?\")"
+    "chain.invoke(\n",
+    "    \"Which director directed movies about dinosaurs that was released after the year 1992 but before 2007?\"\n",
+    ")"
    ]
   },
   {
