--- a/notebooks/langchain/self-query-retriever-examples/langchain-self-query-retriever.ipynb
+++ b/notebooks/langchain/self-query-retriever-examples/langchain-self-query-retriever.ipynb
@@ -67,23 +67,50 @@
     "docs = [\n",
     "    Document(\n",
     "        page_content=\"A bunch of scientists bring back dinosaurs and mayhem breaks loose\",\n",
-    "        metadata={\"year\": 1993, \"rating\": 7.7, \"genre\": \"science fiction\", \"director\": \"Steven Spielberg\", \"title\": \"Jurassic Park\"},\n",
+    "        metadata={\n",
+    "            \"year\": 1993,\n",
+    "            \"rating\": 7.7,\n",
+    "            \"genre\": \"science fiction\",\n",
+    "            \"director\": \"Steven Spielberg\",\n",
+    "            \"title\": \"Jurassic Park\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Leo DiCaprio gets lost in a dream within a dream within a dream within a ...\",\n",
-    "        metadata={\"year\": 2010, \"director\": \"Christopher Nolan\", \"rating\": 8.2, \"title\": \"Inception\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2010,\n",
+    "            \"director\": \"Christopher Nolan\",\n",
+    "            \"rating\": 8.2,\n",
+    "            \"title\": \"Inception\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A psychologist / detective gets lost in a series of dreams within dreams within dreams and Inception reused the idea\",\n",
-    "        metadata={\"year\": 2006, \"director\": \"Satoshi Kon\", \"rating\": 8.6, \"title\": \"Paprika\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2006,\n",
+    "            \"director\": \"Satoshi Kon\",\n",
+    "            \"rating\": 8.6,\n",
+    "            \"title\": \"Paprika\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"A bunch of normal-sized women are supremely wholesome and some men pine after them\",\n",
-    "        metadata={\"year\": 2019, \"director\": \"Greta Gerwig\", \"rating\": 8.3, \"title\": \"Little Women\"},\n",
+    "        metadata={\n",
+    "            \"year\": 2019,\n",
+    "            \"director\": \"Greta Gerwig\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Little Women\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Toys come alive and have a blast doing so\",\n",
-    "        metadata={\"year\": 1995, \"genre\": \"animated\", \"director\": \"John Lasseter\", \"rating\": 8.3, \"title\": \"Toy Story\"},\n",
+    "        metadata={\n",
+    "            \"year\": 1995,\n",
+    "            \"genre\": \"animated\",\n",
+    "            \"director\": \"John Lasseter\",\n",
+    "            \"rating\": 8.3,\n",
+    "            \"title\": \"Toy Story\",\n",
+    "        },\n",
     "    ),\n",
     "    Document(\n",
     "        page_content=\"Three men walk into the Zone, three men walk out of the Zone\",\n",
@@ -132,12 +159,12 @@
     "\n",
     "\n",
     "vectorstore = ElasticsearchStore.from_documents(\n",
-    "    docs, \n",
-    "    embeddings, \n",
-    "    index_name=\"elasticsearch-self-query-demo\", \n",
-    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
-    "    es_api_key=ELASTIC_API_KEY\n",
-    ")\n"
+    "    docs,\n",
+    "    embeddings,\n",
+    "    index_name=\"elasticsearch-self-query-demo\",\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    es_api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
@@ -187,7 +214,7 @@
     "# instantiate retriever\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm, vectorstore, document_content_description, metadata_field_info, verbose=True\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -221,7 +248,7 @@
     }
    ],
    "source": [
-    "# This example only specifies a relevant query \n",
+    "# This example only specifies a relevant query\n",
     "retriever.get_relevant_documents(\"What are some movies about dream\")"
    ]
   },
@@ -253,7 +280,9 @@
     }
    ],
    "source": [
-    "retriever.get_relevant_documents(\"Has Andrei Tarkovsky directed any science fiction movies\")"
+    "retriever.get_relevant_documents(\n",
+    "    \"Has Andrei Tarkovsky directed any science fiction movies\"\n",
+    ")"
    ]
   },
   {
@@ -344,7 +373,9 @@
     }
    ],
    "source": [
-    "retriever.get_relevant_documents(\"Show that one movie which was about dream and was released after the year 1992 but before 2007?\")"
+    "retriever.get_relevant_documents(\n",
+    "    \"Show that one movie which was about dream and was released after the year 1992 but before 2007?\"\n",
+    ")"
    ]
   }
  ],
