--- a/notebooks/model-upgrades/_nbtest.setup.upgrading-index-to-use-elser.ipynb
+++ b/notebooks/model-upgrades/_nbtest.setup.upgrading-index-to-use-elser.ipynb
@@ -34,7 +34,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)"
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
@@ -46,46 +49,40 @@
    "source": [
     "# delete model if already downloaded and deployed\n",
     "try:\n",
-    "  client.ml.delete_trained_model(model_id=\".elser_model_2\",force=True)\n",
-    "  print(\"Model deleted successfully, We will proceed with creating one\")\n",
+    "    client.ml.delete_trained_model(model_id=\".elser_model_2\", force=True)\n",
+    "    print(\"Model deleted successfully, We will proceed with creating one\")\n",
     "except exceptions.NotFoundError:\n",
-    "  print(\"Model doesn't exist, but We will proceed with creating one\")\n",
+    "    print(\"Model doesn't exist, but We will proceed with creating one\")\n",
     "\n",
-    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist. \n",
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
     "client.ml.put_trained_model(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "    input={\n",
-    "      \"field_names\": [\"text_field\"]\n",
-    "    }\n",
-    "  )\n",
+    "    model_id=\".elser_model_2\", input={\"field_names\": [\"text_field\"]}\n",
+    ")\n",
     "\n",
     "while True:\n",
     "    status = client.ml.get_trained_models(\n",
-    "        model_id=\".elser_model_2\",\n",
-    "        include=\"definition_status\"\n",
+    "        model_id=\".elser_model_2\", include=\"definition_status\"\n",
     "    )\n",
-    "    \n",
-    "    if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "\n",
+    "    if status[\"trained_model_configs\"][0][\"fully_defined\"]:\n",
     "        break\n",
     "    time.sleep(5)\n",
     "\n",
     "# Start trained model deployment if not already deployed\n",
     "client.ml.start_trained_model_deployment(\n",
-    "  model_id=\".elser_model_2\",\n",
-    "  number_of_allocations=1,\n",
-    "  wait_for=\"starting\"\n",
+    "    model_id=\".elser_model_2\", number_of_allocations=1, wait_for=\"starting\"\n",
     ")\n",
     "\n",
     "while True:\n",
-    "  status = client.ml.get_trained_models_stats(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "  )\n",
-    "  if (status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\"):\n",
-    "    print(\"ELSER Model has been successfully deployed.\")\n",
-    "    break\n",
-    "  else:\n",
-    "    print(\"ELSER Model is currently being deployed.\")\n",
-    "  time.sleep(5)"
+    "    status = client.ml.get_trained_models_stats(\n",
+    "        model_id=\".elser_model_2\",\n",
+    "    )\n",
+    "    if status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\":\n",
+    "        print(\"ELSER Model has been successfully deployed.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"ELSER Model is currently being deployed.\")\n",
+    "    time.sleep(5)"
    ]
   },
   {
@@ -119,17 +116,17 @@
     "            \"type\": \"dense_vector\",\n",
     "            \"dims\": 384,\n",
     "            \"index\": \"true\",\n",
-    "            \"similarity\": \"cosine\"\n",
+    "            \"similarity\": \"cosine\",\n",
     "        }\n",
     "    }\n",
     "}\n",
-    "client.indices.create(index='books', mappings=mappings)\n",
+    "client.indices.create(index=\"books\", mappings=mappings)\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/data.json\"\n",
     "response = urlopen(url)\n",
     "books = json.loads(response.read())\n",
     "\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
     "operations = []\n",
     "for book in books:\n",
     "    operations.append({\"index\": {\"_index\": \"books\"}})\n",
