--- a/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
+++ b/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
@@ -154,17 +154,10 @@
     }
    ],
    "source": [
-    "\n",
     "client.ingest.put_pipeline(\n",
-    "    id=\"ingest-pipeline-lowercase\", \n",
+    "    id=\"ingest-pipeline-lowercase\",\n",
     "    description=\"Ingest pipeline to change title to lowercase\",\n",
-    "    processors=[\n",
-    "    {\n",
-    "      \"lowercase\": {\n",
-    "        \"field\": \"title\"\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "    processors=[{\"lowercase\": {\"field\": \"title\"}}],\n",
     ")"
    ]
   },
@@ -194,29 +187,24 @@
     }
    ],
    "source": [
-    "client.indices.delete(index=\"movies\",ignore_unavailable=True)\n",
+    "client.indices.delete(index=\"movies\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"movies\",\n",
-    "  settings={\n",
-    "      \"index\": {\n",
-    "          \"number_of_shards\": 1,\n",
-    "          \"number_of_replicas\": 1,\n",
-    "          \"default_pipeline\": \"ingest-pipeline-lowercase\"\n",
-    "      }\n",
-    "  },\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"plot\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "    index=\"movies\",\n",
+    "    settings={\n",
+    "        \"index\": {\n",
+    "            \"number_of_shards\": 1,\n",
+    "            \"number_of_replicas\": 1,\n",
+    "            \"default_pipeline\": \"ingest-pipeline-lowercase\",\n",
     "        }\n",
-    "      },\n",
-    "    }\n",
-    "  }\n",
+    "    },\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"plot\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "            },\n",
+    "        }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -251,10 +239,12 @@
     "# Prepare the documents to be indexed\n",
     "documents = []\n",
     "for doc in data_json:\n",
-    "    documents.append({\n",
-    "        \"_index\": \"movies\",\n",
-    "        \"_source\": doc,\n",
-    "    })\n",
+    "    documents.append(\n",
+    "        {\n",
+    "            \"_index\": \"movies\",\n",
+    "            \"_source\": doc,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "# Use helpers.bulk to index\n",
     "helpers.bulk(client, documents)\n",
@@ -293,21 +283,18 @@
    ],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"elser-ingest-pipeline\", \n",
+    "    id=\"elser-ingest-pipeline\",\n",
     "    description=\"Ingest pipeline for ELSER\",\n",
     "    processors=[\n",
-    "    {\n",
-    "      \"inference\": {\n",
-    "        \"model_id\": \".elser_model_2\",\n",
-    "        \"input_output\": [\n",
-    "            {\n",
-    "              \"input_field\": \"plot\",\n",
-    "              \"output_field\": \"plot_embedding\"\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"input_output\": [\n",
+    "                    {\"input_field\": \"plot\", \"output_field\": \"plot_embedding\"}\n",
+    "                ],\n",
     "            }\n",
-    "          ]\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -337,25 +324,18 @@
     }
    ],
    "source": [
-    "client.indices.delete(index=\"elser-movies\",ignore_unavailable=True)\n",
+    "client.indices.delete(index=\"elser-movies\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"elser-movies\",\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"plot\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "    index=\"elser-movies\",\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"plot\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "            },\n",
+    "            \"plot_embedding\": {\"type\": \"sparse_vector\"},\n",
     "        }\n",
-    "      },\n",
-    "      \"plot_embedding\": { \n",
-    "        \"type\": \"sparse_vector\" \n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -383,12 +363,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.reindex(source={\n",
-    "    \"index\": \"movies\"\n",
-    "  }, dest={\n",
-    "    \"index\": \"elser-movies\",\n",
-    "    \"pipeline\":  \"elser-ingest-pipeline\"\n",
-    "  })\n",
+    "client.reindex(\n",
+    "    source={\"index\": \"movies\"},\n",
+    "    dest={\"index\": \"elser-movies\", \"pipeline\": \"elser-ingest-pipeline\"},\n",
+    ")\n",
     "time.sleep(7)"
    ]
   },
@@ -435,23 +413,23 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index='elser-movies', \n",
+    "    index=\"elser-movies\",\n",
     "    size=3,\n",
     "    query={\n",
     "        \"text_expansion\": {\n",
     "            \"plot_embedding\": {\n",
-    "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"investigation\"\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"model_text\": \"investigation\",\n",
     "            }\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
-    "for hit in response['hits']['hits']:\n",
-    "    doc_id = hit['_id']\n",
-    "    score = hit['_score']\n",
-    "    title = hit['_source']['title']\n",
-    "    plot = hit['_source']['plot']\n",
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    doc_id = hit[\"_id\"]\n",
+    "    score = hit[\"_score\"]\n",
+    "    title = hit[\"_source\"][\"title\"]\n",
+    "    plot = hit[\"_source\"][\"plot\"]\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
   },
@@ -493,21 +471,18 @@
    ],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"elser-pipeline-upgrade-demo\", \n",
+    "    id=\"elser-pipeline-upgrade-demo\",\n",
     "    description=\"Ingest pipeline for ELSER upgrade demo\",\n",
     "    processors=[\n",
-    "    {\n",
-    "      \"inference\": {\n",
-    "        \"model_id\": \".elser_model_2\",\n",
-    "        \"input_output\": [\n",
-    "            {\n",
-    "              \"input_field\": \"title\",\n",
-    "              \"output_field\": \"title_embedding\"\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"input_output\": [\n",
+    "                    {\"input_field\": \"title\", \"output_field\": \"title_embedding\"}\n",
+    "                ],\n",
     "            }\n",
-    "          ]\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -538,23 +513,16 @@
    "source": [
     "client.indices.delete(index=\"elser-upgrade-index-demo\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"elser-upgrade-index-demo\",\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"title\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "    index=\"elser-upgrade-index-demo\",\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"title\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "            },\n",
+    "            \"title_embedding\": {\"type\": \"sparse_vector\"},\n",
     "        }\n",
-    "      },\n",
-    "      \"title_embedding\": {\n",
-    "        \"type\": \"sparse_vector\"\n",
-    "      },\n",
-    "    }\n",
-    "  }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -575,15 +543,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.reindex(source={\n",
-    "    \"index\": \"books\", # replace with your index name\n",
-    "    \"_source\": {\n",
-    "      \"excludes\": [\"title_vector\"]  # replace with the field-name from your index, that has previously generated tokens\n",
-    "    }}, \n",
+    "client.reindex(\n",
+    "    source={\n",
+    "        \"index\": \"books\",  # replace with your index name\n",
+    "        \"_source\": {\n",
+    "            \"excludes\": [\n",
+    "                \"title_vector\"\n",
+    "            ]  # replace with the field-name from your index, that has previously generated tokens\n",
+    "        },\n",
+    "    },\n",
     "    dest={\n",
-    "    \"index\": \"elser-upgrade-index-demo\",\n",
-    "    \"pipeline\": \"elser-pipeline-upgrade-demo\"\n",
-    "  })\n",
+    "        \"index\": \"elser-upgrade-index-demo\",\n",
+    "        \"pipeline\": \"elser-pipeline-upgrade-demo\",\n",
+    "    },\n",
+    ")\n",
     "time.sleep(5)"
    ]
   },
@@ -622,24 +595,24 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index='elser-upgrade-index-demo', \n",
+    "    index=\"elser-upgrade-index-demo\",\n",
     "    size=3,\n",
     "    query={\n",
     "        \"text_expansion\": {\n",
     "            \"title_embedding\": {\n",
-    "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"Programming Course\"\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"model_text\": \"Programming Course\",\n",
     "            }\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
-    "for hit in response['hits']['hits']:\n",
-    "    doc_id = hit['_id']\n",
-    "    score = hit['_score']\n",
-    "    title = hit['_source']['title']\n",
-    "    plot = hit['_source']['title']\n",
-    "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")\n"
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    doc_id = hit[\"_id\"]\n",
+    "    score = hit[\"_score\"]\n",
+    "    title = hit[\"_source\"][\"title\"]\n",
+    "    plot = hit[\"_source\"][\"title\"]\n",
+    "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
   },
   {
@@ -721,21 +694,18 @@
    ],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"elser-pipeline-books\", \n",
+    "    id=\"elser-pipeline-books\",\n",
     "    description=\"Ingest pipeline for ELSER upgrade\",\n",
     "    processors=[\n",
-    "    {\n",
-    "      \"inference\": {\n",
-    "        \"model_id\": \".elser_model_2\",\n",
-    "        \"input_output\": [\n",
-    "          {\n",
-    "            \"input_field\": \"title\",\n",
-    "            \"output_field\": \"title_embedding\"\n",
-    "          }\n",
-    "        ]\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"input_output\": [\n",
+    "                    {\"input_field\": \"title\", \"output_field\": \"title_embedding\"}\n",
+    "                ],\n",
+    "            }\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -767,23 +737,16 @@
    "source": [
     "client.indices.delete(index=\"elser-books\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"elser-books\",\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"title\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "    index=\"elser-books\",\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"title\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "            },\n",
+    "            \"title_embedding\": {\"type\": \"sparse_vector\"},\n",
     "        }\n",
-    "      },\n",
-    "      \"title_embedding\": {\n",
-    "        \"type\": \"sparse_vector\"\n",
-    "      },\n",
-    "    }\n",
-    "  }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -802,15 +765,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.reindex(source={\n",
-    "    \"index\": \"books\",\n",
-    "    \"_source\": {\n",
-    "      \"excludes\": [\"title_vector\"]\n",
-    "    }\n",
-    "  }, dest={\n",
-    "    \"index\": \"elser-books\",\n",
-    "    \"pipeline\":  \"elser-pipeline-books\"\n",
-    "  })\n",
+    "client.reindex(\n",
+    "    source={\"index\": \"books\", \"_source\": {\"excludes\": [\"title_vector\"]}},\n",
+    "    dest={\"index\": \"elser-books\", \"pipeline\": \"elser-pipeline-books\"},\n",
+    ")\n",
     "time.sleep(5)"
    ]
   },
@@ -849,23 +807,23 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index='elser-books', \n",
+    "    index=\"elser-books\",\n",
     "    size=3,\n",
     "    query={\n",
     "        \"text_expansion\": {\n",
     "            \"title_embedding\": {\n",
-    "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"Python tutorial\"\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"model_text\": \"Python tutorial\",\n",
     "            }\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
-    "for hit in response['hits']['hits']:\n",
-    "    doc_id = hit['_id']\n",
-    "    score = hit['_score']\n",
-    "    title = hit['_source']['title']\n",
-    "    print(f\"Score: {score}\\nTitle: {title}\")\n"
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    doc_id = hit[\"_id\"]\n",
+    "    score = hit[\"_score\"]\n",
+    "    title = hit[\"_source\"][\"title\"]\n",
+    "    print(f\"Score: {score}\\nTitle: {title}\")"
    ]
   },
   {
