--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')"
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -257,13 +257,13 @@
     "            \"type\": \"dense_vector\",\n",
     "            \"dims\": 384,\n",
     "            \"index\": \"true\",\n",
-    "            \"similarity\": \"cosine\"\n",
+    "            \"similarity\": \"cosine\",\n",
     "        }\n",
     "    }\n",
     "}\n",
     "\n",
     "# Create the index\n",
-    "client.indices.create(index='book_index', mappings=mappings)"
+    "client.indices.create(index=\"book_index\", mappings=mappings)"
    ]
   },
   {
@@ -338,19 +338,19 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
-    "        for hit in response['hits']['hits']:\n",
-    "            id = hit['_id']\n",
-    "            publication_date = hit['_source']['publish_date']\n",
-    "            score = hit['_score']\n",
-    "            title = hit['_source']['title']\n",
-    "            summary = hit['_source']['summary']\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            publication_date = hit[\"_source\"][\"publish_date\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            title = hit[\"_source\"][\"title\"]\n",
+    "            summary = hit[\"_source\"][\"summary\"]\n",
     "            publisher = hit[\"_source\"][\"publisher\"]\n",
     "            num_reviews = hit[\"_source\"][\"num_reviews\"]\n",
     "            authors = hit[\"_source\"][\"authors\"]\n",
-    "            pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\")\n",
+    "            pretty_output = f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\"\n",
     "            print(pretty_output)"
    ]
   },
@@ -480,11 +480,11 @@
     "response = client.search(\n",
     "    index=\"book_index\",\n",
     "    knn={\n",
-    "      \"field\": \"title_vector\",\n",
-    "      \"query_vector\": model.encode(\"javascript books\"),\n",
-    "      \"k\": 10,\n",
-    "      \"num_candidates\": 100\n",
-    "    }\n",
+    "        \"field\": \"title_vector\",\n",
+    "        \"query_vector\": model.encode(\"javascript books\"),\n",
+    "        \"k\": 10,\n",
+    "        \"num_candidates\": 100,\n",
+    "    },\n",
     ")\n",
     "\n",
     "pretty_response(response)"
@@ -560,16 +560,12 @@
     "response = client.search(\n",
     "    index=\"book_index\",\n",
     "    knn={\n",
-    "      \"field\": \"title_vector\",\n",
-    "      \"query_vector\": model.encode(\"javascript books\"),\n",
-    "      \"k\": 10,\n",
-    "      \"num_candidates\": 100,\n",
-    "      \"filter\": {\n",
-    "          \"term\": {\n",
-    "              \"publisher.keyword\": \"addison-wesley\"\n",
-    "          }\n",
-    "      }\n",
-    "    }\n",
+    "        \"field\": \"title_vector\",\n",
+    "        \"query_vector\": model.encode(\"javascript books\"),\n",
+    "        \"k\": 10,\n",
+    "        \"num_candidates\": 100,\n",
+    "        \"filter\": {\"term\": {\"publisher.keyword\": \"addison-wesley\"}},\n",
+    "    },\n",
     ")\n",
     "\n",
     "pretty_response(response)"
