--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "from elasticsearch import Elasticsearch\n",
-    "from getpass import getpass "
+    "from getpass import getpass"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -83,19 +83,19 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
-    "        for hit in response['hits']['hits']:\n",
-    "            id = hit['_id']\n",
-    "            publication_date = hit['_source']['publish_date']\n",
-    "            score = hit['_score']\n",
-    "            title = hit['_source']['title']\n",
-    "            summary = hit['_source']['summary']\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            publication_date = hit[\"_source\"][\"publish_date\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            title = hit[\"_source\"][\"title\"]\n",
+    "            summary = hit[\"_source\"][\"summary\"]\n",
     "            publisher = hit[\"_source\"][\"publisher\"]\n",
     "            num_reviews = hit[\"_source\"][\"num_reviews\"]\n",
     "            authors = hit[\"_source\"][\"authors\"]\n",
-    "            pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\")\n",
+    "            pretty_output = f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nPublisher: {publisher}\\nReviews: {num_reviews}\\nAuthors: {authors}\\nScore: {score}\"\n",
     "            print(pretty_output)"
    ]
   },
@@ -200,13 +200,9 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"match\": {\n",
-    "        \"summary\": {\n",
-    "            \"query\": \"guide\"\n",
-    "        }\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\", query={\"match\": {\"summary\": {\"query\": \"guide\"}}}\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -271,12 +267,10 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"multi_match\": {\n",
-    "        \"query\": \"javascript\",\n",
-    "        \"fields\": [\"summary\", \"title\"]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\"multi_match\": {\"query\": \"javascript\", \"fields\": [\"summary\", \"title\"]}},\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -337,12 +331,10 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"multi_match\": {\n",
-    "        \"query\": \"javascript\",\n",
-    "        \"fields\": [\"summary\", \"title^3\"]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\"multi_match\": {\"query\": \"javascript\", \"fields\": [\"summary\", \"title^3\"]}},\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -398,11 +390,9 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"term\": {\n",
-    "        \"publisher.keyword\": \"addison-wesley\"\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\", query={\"term\": {\"publisher.keyword\": \"addison-wesley\"}}\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -458,13 +448,9 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"range\": {\n",
-    "        \"num_reviews\": {\n",
-    "            \"gte\": 45\n",
-    "        }\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\", query={\"range\": {\"num_reviews\": {\"gte\": 45}}}\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -518,13 +504,9 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"prefix\": {\n",
-    "        \"title\": {\n",
-    "            \"value\": 'java'\n",
-    "        }\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\", query={\"prefix\": {\"title\": {\"value\": \"java\"}}}\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -588,13 +570,9 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"fuzzy\": {\n",
-    "        \"title\": {\n",
-    "            \"value\": 'pyvascript'\n",
-    "        }\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\", query={\"fuzzy\": {\"title\": {\"value\": \"pyvascript\"}}}\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -647,19 +625,17 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"bool\": {\n",
-    "        \"must\": [{\n",
-    "            \"term\": {\n",
-    "                \"publisher.keyword\": \"addison-wesley\"\n",
-    "            }\n",
-    "        }, {\n",
-    "            \"term\": {\n",
-    "                \"authors.keyword\": \"richard helm\"\n",
-    "            }\n",
-    "        }]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\n",
+    "        \"bool\": {\n",
+    "            \"must\": [\n",
+    "                {\"term\": {\"publisher.keyword\": \"addison-wesley\"}},\n",
+    "                {\"term\": {\"authors.keyword\": \"richard helm\"}},\n",
+    "            ]\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -722,19 +698,17 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"bool\": {\n",
-    "        \"should\": [{\n",
-    "            \"term\": {\n",
-    "                \"publisher.keyword\": \"addison-wesley\"\n",
-    "            }\n",
-    "        }, {\n",
-    "            \"term\": {\n",
-    "                \"authors.keyword\": \"douglas crockford\"\n",
-    "            }\n",
-    "        }]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\n",
+    "        \"bool\": {\n",
+    "            \"should\": [\n",
+    "                {\"term\": {\"publisher.keyword\": \"addison-wesley\"}},\n",
+    "                {\"term\": {\"authors.keyword\": \"douglas crockford\"}},\n",
+    "            ]\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -805,15 +779,10 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"bool\": {\n",
-    "        \"filter\": [{\n",
-    "            \"term\": {\n",
-    "                \"publisher.keyword\": \"prentice hall\"\n",
-    "            }\n",
-    "        }]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\"bool\": {\"filter\": [{\"term\": {\"publisher.keyword\": \"prentice hall\"}}]}},\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -857,17 +826,10 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"bool\": {\n",
-    "        \"must_not\": [{\n",
-    "            \"range\": {\n",
-    "                \"num_reviews\": {\n",
-    "                    \"lte\": 45\n",
-    "                }\n",
-    "            }\n",
-    "        }]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\"bool\": {\"must_not\": [{\"range\": {\"num_reviews\": {\"lte\": 45}}}]}},\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -904,28 +866,15 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"book_index\", query={\n",
-    "    \"bool\": {\n",
-    "        \"must\": [\n",
-    "            {\n",
-    "                \"match\": {\n",
-    "                    \"title\": {\n",
-    "                        \"query\": \"javascript\"\n",
-    "                    }\n",
-    "                }\n",
-    "            }\n",
-    "        ], \n",
-    "        \"must_not\": [\n",
-    "            {\n",
-    "                \"range\": {\n",
-    "                    \"num_reviews\": {\n",
-    "                        \"lte\": 45\n",
-    "                    }\n",
-    "                }\n",
-    "            }\n",
-    "        ]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"book_index\",\n",
+    "    query={\n",
+    "        \"bool\": {\n",
+    "            \"must\": [{\"match\": {\"title\": {\"query\": \"javascript\"}}}],\n",
+    "            \"must_not\": [{\"range\": {\"num_reviews\": {\"lte\": 45}}}],\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
