--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -70,7 +70,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "from getpass import getpass\n",
     "\n",
-    "model = SentenceTransformer('all-MiniLM-L6-v2')"
+    "model = SentenceTransformer(\"all-MiniLM-L6-v2\")"
    ]
   },
   {
@@ -109,7 +109,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -179,16 +179,16 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
-    "        for hit in response['hits']['hits']:\n",
-    "            id = hit['_id']\n",
-    "            publication_date = hit['_source']['publish_date']\n",
-    "            rank = hit['_rank']\n",
-    "            title = hit['_source']['title']\n",
-    "            summary = hit['_source']['summary']\n",
-    "            pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nRank: {rank}\")\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            publication_date = hit[\"_source\"][\"publish_date\"]\n",
+    "            rank = hit[\"_rank\"]\n",
+    "            title = hit[\"_source\"][\"title\"]\n",
+    "            summary = hit[\"_source\"][\"summary\"]\n",
+    "            pretty_output = f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nRank: {rank}\"\n",
     "            print(pretty_output)"
    ]
   },
@@ -256,22 +256,18 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index=\"book_index\", \n",
-    "    size=5, \n",
-    "    query={\n",
-    "        \"match\": {\n",
-    "            \"summary\": \"python programming\"\n",
-    "        }\n",
-    "    }, \n",
+    "    index=\"book_index\",\n",
+    "    size=5,\n",
+    "    query={\"match\": {\"summary\": \"python programming\"}},\n",
     "    knn={\n",
     "        \"field\": \"title_vector\",\n",
-    "        \"query_vector\" : model.encode(\"python programming\").tolist(), # generate embedding for query so it can be compared to `title_vector`\n",
+    "        \"query_vector\": model.encode(\n",
+    "            \"python programming\"\n",
+    "        ).tolist(),  # generate embedding for query so it can be compared to `title_vector`\n",
     "        \"k\": 5,\n",
-    "        \"num_candidates\": 10\n",
+    "        \"num_candidates\": 10,\n",
     "    },\n",
-    "    rank={\n",
-    "        \"rrf\": {}\n",
-    "    }\n",
+    "    rank={\"rrf\": {}},\n",
     ")\n",
     "\n",
     "pretty_response(response)"
