--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -111,7 +111,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -179,18 +179,15 @@
    "source": [
     "# delete model if already downloaded and deployed\n",
     "try:\n",
-    "  client.ml.delete_trained_model(model_id=\".elser_model_2\",force=True)\n",
-    "  print(\"Model deleted successfully, We will proceed with creating one\")\n",
+    "    client.ml.delete_trained_model(model_id=\".elser_model_2\", force=True)\n",
+    "    print(\"Model deleted successfully, We will proceed with creating one\")\n",
     "except exceptions.NotFoundError:\n",
-    "  print(\"Model doesn't exist, but We will proceed with creating one\")\n",
+    "    print(\"Model doesn't exist, but We will proceed with creating one\")\n",
     "\n",
-    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist. \n",
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
     "client.ml.put_trained_model(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "    input={\n",
-    "      \"field_names\": [\"text_field\"]\n",
-    "    }\n",
-    "  )\n"
+    "    model_id=\".elser_model_2\", input={\"field_names\": [\"text_field\"]}\n",
+    ")"
    ]
   },
   {
@@ -208,11 +205,10 @@
    "source": [
     "while True:\n",
     "    status = client.ml.get_trained_models(\n",
-    "        model_id=\".elser_model_2\",\n",
-    "        include=\"definition_status\"\n",
+    "        model_id=\".elser_model_2\", include=\"definition_status\"\n",
     "    )\n",
-    "    \n",
-    "    if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "\n",
+    "    if status[\"trained_model_configs\"][0][\"fully_defined\"]:\n",
     "        print(\"ELSER Model is downloaded and ready to be deployed.\")\n",
     "        break\n",
     "    else:\n",
@@ -235,23 +231,19 @@
    "source": [
     "# Start trained model deployment if not already deployed\n",
     "client.ml.start_trained_model_deployment(\n",
-    "  model_id=\".elser_model_2\",\n",
-    "  number_of_allocations=1,\n",
-    "  wait_for=\"starting\"\n",
+    "    model_id=\".elser_model_2\", number_of_allocations=1, wait_for=\"starting\"\n",
     ")\n",
     "\n",
     "while True:\n",
-    "  status = client.ml.get_trained_models_stats(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "  )\n",
-    "  if (status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\"):\n",
-    "    print(\"ELSER Model has been successfully deployed.\")\n",
-    "    break\n",
-    "  else:\n",
-    "    print(\"ELSER Model is currently being deployed.\")\n",
-    "  time.sleep(5)\n",
-    "\n",
-    "\n"
+    "    status = client.ml.get_trained_models_stats(\n",
+    "        model_id=\".elser_model_2\",\n",
+    "    )\n",
+    "    if status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\":\n",
+    "        print(\"ELSER Model has been successfully deployed.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"ELSER Model is currently being deployed.\")\n",
+    "    time.sleep(5)"
    ]
   },
   {
@@ -298,21 +290,18 @@
    ],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"elser-ingest-pipeline\", \n",
+    "    id=\"elser-ingest-pipeline\",\n",
     "    description=\"Ingest pipeline for ELSER\",\n",
     "    processors=[\n",
-    "    {\n",
-    "      \"inference\": {\n",
-    "        \"model_id\": \".elser_model_2\",\n",
-    "        \"input_output\": [\n",
-    "            {\n",
-    "              \"input_field\": \"plot\",\n",
-    "              \"output_field\": \"plot_embedding\"\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"input_output\": [\n",
+    "                    {\"input_field\": \"plot\", \"output_field\": \"plot_embedding\"}\n",
+    "                ],\n",
     "            }\n",
-    "          ]\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -373,28 +362,17 @@
    "source": [
     "client.indices.delete(index=\"elser-example-movies\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"elser-example-movies\",\n",
-    "  settings={\n",
-    "      \"index\": {\n",
-    "          \"default_pipeline\": \"elser-ingest-pipeline\"\n",
-    "      }\n",
-    "  },\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"plot\": {\n",
-    "        \"type\": \"text\",\n",
-    "        \"fields\": {\n",
-    "          \"keyword\": {\n",
-    "            \"type\": \"keyword\",\n",
-    "            \"ignore_above\": 256\n",
-    "          }\n",
+    "    index=\"elser-example-movies\",\n",
+    "    settings={\"index\": {\"default_pipeline\": \"elser-ingest-pipeline\"}},\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"plot\": {\n",
+    "                \"type\": \"text\",\n",
+    "                \"fields\": {\"keyword\": {\"type\": \"keyword\", \"ignore_above\": 256}},\n",
+    "            },\n",
+    "            \"plot_embedding\": {\"type\": \"sparse_vector\"},\n",
     "        }\n",
-    "      },\n",
-    "      \"plot_embedding\": { \n",
-    "        \"type\": \"sparse_vector\" \n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -440,10 +418,12 @@
     "# Prepare the documents to be indexed\n",
     "documents = []\n",
     "for doc in data_json:\n",
-    "    documents.append({\n",
-    "        \"_index\": \"elser-example-movies\",\n",
-    "        \"_source\": doc,\n",
-    "    })\n",
+    "    documents.append(\n",
+    "        {\n",
+    "            \"_index\": \"elser-example-movies\",\n",
+    "            \"_source\": doc,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "# Use helpers.bulk to index\n",
     "helpers.bulk(client, documents)\n",
@@ -511,23 +491,23 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index='elser-example-movies', \n",
+    "    index=\"elser-example-movies\",\n",
     "    size=3,\n",
     "    query={\n",
     "        \"text_expansion\": {\n",
     "            \"plot_embedding\": {\n",
-    "                \"model_id\":\".elser_model_2\",\n",
-    "                \"model_text\":\"fighting movie\"\n",
+    "                \"model_id\": \".elser_model_2\",\n",
+    "                \"model_text\": \"fighting movie\",\n",
     "            }\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
-    "for hit in response['hits']['hits']:\n",
-    "    doc_id = hit['_id']\n",
-    "    score = hit['_score']\n",
-    "    title = hit['_source']['title']\n",
-    "    plot = hit['_source']['plot']\n",
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    doc_id = hit[\"_id\"]\n",
+    "    score = hit[\"_score\"]\n",
+    "    title = hit[\"_source\"][\"title\"]\n",
+    "    plot = hit[\"_source\"][\"plot\"]\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
   },
