--- a/notebooks/search/04-multilingual.ipynb
+++ b/notebooks/search/04-multilingual.ipynb
@@ -249,7 +249,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -347,8 +347,8 @@
     "            \"type\": \"dense_vector\",\n",
     "            \"dims\": 768,\n",
     "            \"index\": \"true\",\n",
-    "            \"similarity\": \"cosine\"\n",
-    "        }\n",
+    "            \"similarity\": \"cosine\",\n",
+    "        },\n",
     "    }\n",
     "}\n",
     "\n",
@@ -451,9 +451,9 @@
     "def query(q, language=None):\n",
     "    knn = {\n",
     "        \"field\": \"passage_embedding\",\n",
-    "        \"query_vector\" : model.encode(f\"query: {q}\").tolist(),\n",
+    "        \"query_vector\": model.encode(f\"query: {q}\").tolist(),\n",
     "        \"k\": 2,\n",
-    "        \"num_candidates\": 5\n",
+    "        \"num_candidates\": 5,\n",
     "    }\n",
     "\n",
     "    if language:\n",
@@ -480,8 +480,8 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
     "        for hit in response[\"hits\"][\"hits\"]:\n",
     "            score = hit[\"_score\"]\n",
