--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -93,7 +93,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -232,34 +232,35 @@
    "outputs": [],
    "source": [
     "def pretty_response(response):\n",
-    "    if len(response['hits']['hits']) == 0:\n",
-    "        print('Your search returned no results.')\n",
+    "    if len(response[\"hits\"][\"hits\"]) == 0:\n",
+    "        print(\"Your search returned no results.\")\n",
     "    else:\n",
-    "        for hit in response['hits']['hits']:\n",
-    "            id = hit['_id']\n",
-    "            score = hit['_score']\n",
-    "            name = hit['_source']['name']\n",
-    "            description = hit['_source']['description']\n",
+    "        for hit in response[\"hits\"][\"hits\"]:\n",
+    "            id = hit[\"_id\"]\n",
+    "            score = hit[\"_score\"]\n",
+    "            name = hit[\"_source\"][\"name\"]\n",
+    "            description = hit[\"_source\"][\"description\"]\n",
     "            price = hit[\"_source\"][\"price\"]\n",
     "            currency = hit[\"_source\"][\"currency\"]\n",
     "            plug_type = hit[\"_source\"][\"plug_type\"]\n",
     "            voltage = hit[\"_source\"][\"voltage\"]\n",
-    "            pretty_output = (f\"\\nID: {id}\\nName: {name}\\nDescription: {description}\\nPrice: {price}\\nCurrency: {currency}\\nPlug type: {plug_type}\\nVoltage: {voltage}\\nScore: {score}\")\n",
+    "            pretty_output = f\"\\nID: {id}\\nName: {name}\\nDescription: {description}\\nPrice: {price}\\nCurrency: {currency}\\nPlug type: {plug_type}\\nVoltage: {voltage}\\nScore: {score}\"\n",
     "            print(pretty_output)\n",
     "\n",
+    "\n",
     "def pretty_ruleset(response):\n",
-    "    print(\"Ruleset ID: \" + response['ruleset_id'])\n",
-    "    for rule in response['rules']:\n",
-    "        rule_id = rule['rule_id']\n",
-    "        type = rule['type']\n",
+    "    print(\"Ruleset ID: \" + response[\"ruleset_id\"])\n",
+    "    for rule in response[\"rules\"]:\n",
+    "        rule_id = rule[\"rule_id\"]\n",
+    "        type = rule[\"type\"]\n",
     "        print(f\"\\nRule ID: {rule_id}\\n\\tType: {type}\\n\\tCriteria:\")\n",
-    "        criteria = rule['criteria']\n",
+    "        criteria = rule[\"criteria\"]\n",
     "        for rule_criteria in criteria:\n",
-    "            criteria_type = rule_criteria['type']\n",
-    "            metadata = rule_criteria['metadata']\n",
-    "            values = rule_criteria['values']\n",
+    "            criteria_type = rule_criteria[\"type\"]\n",
+    "            metadata = rule_criteria[\"metadata\"]\n",
+    "            values = rule_criteria[\"values\"]\n",
     "            print(f\"\\t\\t{metadata} {criteria_type} {values}\")\n",
-    "        ids = rule['actions']['ids']\n",
+    "        ids = rule[\"actions\"][\"ids\"]\n",
     "        print(f\"\\tPinned ids: {ids}\")"
    ]
   },
@@ -321,12 +322,15 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"products_index\", query={\n",
-    "    \"multi_match\": {\n",
-    "        \"query\": \"reliable wireless charger for iPhone\",\n",
-    "        \"fields\": [ \"name^5\", \"description\" ]\n",
-    "    }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"products_index\",\n",
+    "    query={\n",
+    "        \"multi_match\": {\n",
+    "            \"query\": \"reliable wireless charger for iPhone\",\n",
+    "            \"fields\": [\"name^5\", \"description\"],\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -371,50 +375,37 @@
     }
    ],
    "source": [
-    "client.query_ruleset.put(ruleset_id=\"promotion-rules\", rules=[\n",
-    "    {\n",
-    "      \"rule_id\": \"us-charger\",\n",
-    "      \"type\": \"pinned\",\n",
-    "      \"criteria\": [\n",
+    "client.query_ruleset.put(\n",
+    "    ruleset_id=\"promotion-rules\",\n",
+    "    rules=[\n",
     "        {\n",
-    "          \"type\": \"contains\",\n",
-    "          \"metadata\": \"my_query\",\n",
-    "          \"values\": [\"wireless charger\"]\n",
+    "            \"rule_id\": \"us-charger\",\n",
+    "            \"type\": \"pinned\",\n",
+    "            \"criteria\": [\n",
+    "                {\n",
+    "                    \"type\": \"contains\",\n",
+    "                    \"metadata\": \"my_query\",\n",
+    "                    \"values\": [\"wireless charger\"],\n",
+    "                },\n",
+    "                {\"type\": \"exact\", \"metadata\": \"country\", \"values\": [\"us\"]},\n",
+    "            ],\n",
+    "            \"actions\": {\"ids\": [\"us1\"]},\n",
     "        },\n",
     "        {\n",
-    "          \"type\": \"exact\",\n",
-    "          \"metadata\": \"country\",\n",
-    "          \"values\": [\"us\"]\n",
-    "        }\n",
-    "      ],\n",
-    "      \"actions\": {\n",
-    "        \"ids\": [\n",
-    "          \"us1\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    {\n",
-    "      \"rule_id\": \"uk-charger\",\n",
-    "      \"type\": \"pinned\",\n",
-    "      \"criteria\": [\n",
-    "        {\n",
-    "          \"type\": \"contains\",\n",
-    "          \"metadata\": \"my_query\",\n",
-    "          \"values\": [\"wireless charger\"]\n",
+    "            \"rule_id\": \"uk-charger\",\n",
+    "            \"type\": \"pinned\",\n",
+    "            \"criteria\": [\n",
+    "                {\n",
+    "                    \"type\": \"contains\",\n",
+    "                    \"metadata\": \"my_query\",\n",
+    "                    \"values\": [\"wireless charger\"],\n",
+    "                },\n",
+    "                {\"type\": \"exact\", \"metadata\": \"country\", \"values\": [\"uk\"]},\n",
+    "            ],\n",
+    "            \"actions\": {\"ids\": [\"uk1\"]},\n",
     "        },\n",
-    "        {\n",
-    "          \"type\": \"exact\",\n",
-    "          \"metadata\": \"country\",\n",
-    "          \"values\": [\"uk\"]\n",
-    "        }\n",
-    "      ],\n",
-    "      \"actions\": {\n",
-    "        \"ids\": [\n",
-    "          \"uk1\"\n",
-    "        ]\n",
-    "      }\n",
-    "    }\n",
-    "  ])"
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -527,21 +518,24 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"products_index\", query={\n",
-    "      \"rule_query\": {\n",
-    "          \"organic\": {\n",
-    "              \"multi_match\": {\n",
-    "                  \"query\": \"reliable wireless charger for iPhone\",\n",
-    "                  \"fields\": [ \"name^5\", \"description\" ]\n",
-    "              }\n",
-    "          },\n",
-    "          \"match_criteria\": {\n",
-    "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
-    "            \"country\": \"us\"\n",
-    "          },\n",
-    "          \"ruleset_id\": \"promotion-rules\"\n",
-    "      }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"products_index\",\n",
+    "    query={\n",
+    "        \"rule_query\": {\n",
+    "            \"organic\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": \"reliable wireless charger for iPhone\",\n",
+    "                    \"fields\": [\"name^5\", \"description\"],\n",
+    "                }\n",
+    "            },\n",
+    "            \"match_criteria\": {\n",
+    "                \"my_query\": \"reliable wireless charger for iPhone\",\n",
+    "                \"country\": \"us\",\n",
+    "            },\n",
+    "            \"ruleset_id\": \"promotion-rules\",\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -606,21 +600,24 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"products_index\", query={\n",
-    "      \"rule_query\": {\n",
-    "          \"organic\": {\n",
-    "              \"multi_match\": {\n",
-    "                  \"query\": \"reliable wireless charger for iPhone\",\n",
-    "                  \"fields\": [ \"name^5\", \"description\" ]\n",
-    "              }\n",
-    "          },\n",
-    "          \"match_criteria\": {\n",
-    "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
-    "            \"country\": \"ca\"\n",
-    "          },\n",
-    "          \"ruleset_id\": \"promotion-rules\"\n",
-    "      }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"products_index\",\n",
+    "    query={\n",
+    "        \"rule_query\": {\n",
+    "            \"organic\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": \"reliable wireless charger for iPhone\",\n",
+    "                    \"fields\": [\"name^5\", \"description\"],\n",
+    "                }\n",
+    "            },\n",
+    "            \"match_criteria\": {\n",
+    "                \"my_query\": \"reliable wireless charger for iPhone\",\n",
+    "                \"country\": \"ca\",\n",
+    "            },\n",
+    "            \"ruleset_id\": \"promotion-rules\",\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
@@ -653,64 +650,43 @@
     }
    ],
    "source": [
-    "client.query_ruleset.put(ruleset_id=\"promotion-rules\", rules=[\n",
-    "    {\n",
-    "      \"rule_id\": \"preorder\",\n",
-    "      \"type\": \"pinned\",\n",
-    "      \"criteria\": [\n",
+    "client.query_ruleset.put(\n",
+    "    ruleset_id=\"promotion-rules\",\n",
+    "    rules=[\n",
     "        {\n",
-    "          \"type\": \"always\"\n",
-    "        }\n",
-    "      ],\n",
-    "      \"actions\": {\n",
-    "        \"ids\": [\n",
-    "          \"preview1\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    {\n",
-    "      \"rule_id\": \"us-charger\",\n",
-    "      \"type\": \"pinned\",\n",
-    "      \"criteria\": [\n",
-    "        {\n",
-    "          \"type\": \"contains\",\n",
-    "          \"metadata\": \"my_query\",\n",
-    "          \"values\": [\"wireless charger\"]\n",
+    "            \"rule_id\": \"preorder\",\n",
+    "            \"type\": \"pinned\",\n",
+    "            \"criteria\": [{\"type\": \"always\"}],\n",
+    "            \"actions\": {\"ids\": [\"preview1\"]},\n",
     "        },\n",
     "        {\n",
-    "          \"type\": \"exact\",\n",
-    "          \"metadata\": \"country\",\n",
-    "          \"values\": [\"us\"]\n",
-    "        }\n",
-    "      ],\n",
-    "      \"actions\": {\n",
-    "        \"ids\": [\n",
-    "          \"us1\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    {\n",
-    "      \"rule_id\": \"uk-charger\",\n",
-    "      \"type\": \"pinned\",\n",
-    "      \"criteria\": [\n",
-    "        {\n",
-    "          \"type\": \"contains\",\n",
-    "          \"metadata\": \"my_query\",\n",
-    "          \"values\": [\"wireless charger\"]\n",
+    "            \"rule_id\": \"us-charger\",\n",
+    "            \"type\": \"pinned\",\n",
+    "            \"criteria\": [\n",
+    "                {\n",
+    "                    \"type\": \"contains\",\n",
+    "                    \"metadata\": \"my_query\",\n",
+    "                    \"values\": [\"wireless charger\"],\n",
+    "                },\n",
+    "                {\"type\": \"exact\", \"metadata\": \"country\", \"values\": [\"us\"]},\n",
+    "            ],\n",
+    "            \"actions\": {\"ids\": [\"us1\"]},\n",
     "        },\n",
     "        {\n",
-    "          \"type\": \"exact\",\n",
-    "          \"metadata\": \"country\",\n",
-    "          \"values\": [\"uk\"]\n",
-    "        }\n",
-    "      ],\n",
-    "      \"actions\": {\n",
-    "        \"ids\": [\n",
-    "          \"uk1\"\n",
-    "        ]\n",
-    "      }\n",
-    "    }\n",
-    "  ])"
+    "            \"rule_id\": \"uk-charger\",\n",
+    "            \"type\": \"pinned\",\n",
+    "            \"criteria\": [\n",
+    "                {\n",
+    "                    \"type\": \"contains\",\n",
+    "                    \"metadata\": \"my_query\",\n",
+    "                    \"values\": [\"wireless charger\"],\n",
+    "                },\n",
+    "                {\"type\": \"exact\", \"metadata\": \"country\", \"values\": [\"uk\"]},\n",
+    "            ],\n",
+    "            \"actions\": {\"ids\": [\"uk1\"]},\n",
+    "        },\n",
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -771,21 +747,24 @@
     }
    ],
    "source": [
-    "response = client.search(index=\"products_index\", query={\n",
-    "      \"rule_query\": {\n",
-    "          \"organic\": {\n",
-    "              \"multi_match\": {\n",
-    "                  \"query\": \"reliable wireless charger for iPhone\",\n",
-    "                  \"fields\": [ \"name^5\", \"description\" ]\n",
-    "              }\n",
-    "          },\n",
-    "          \"match_criteria\": {\n",
-    "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
-    "            \"country\": \"uk\"\n",
-    "          },\n",
-    "          \"ruleset_id\": \"promotion-rules\"\n",
-    "      }\n",
-    "})\n",
+    "response = client.search(\n",
+    "    index=\"products_index\",\n",
+    "    query={\n",
+    "        \"rule_query\": {\n",
+    "            \"organic\": {\n",
+    "                \"multi_match\": {\n",
+    "                    \"query\": \"reliable wireless charger for iPhone\",\n",
+    "                    \"fields\": [\"name^5\", \"description\"],\n",
+    "                }\n",
+    "            },\n",
+    "            \"match_criteria\": {\n",
+    "                \"my_query\": \"reliable wireless charger for iPhone\",\n",
+    "                \"country\": \"uk\",\n",
+    "            },\n",
+    "            \"ruleset_id\": \"promotion-rules\",\n",
+    "        }\n",
+    "    },\n",
+    ")\n",
     "\n",
     "pretty_response(response)"
    ]
