--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -113,7 +113,7 @@
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
-    "    # hosts=[\"http://localhost:9200\"] \n",
+    "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
     ")"
@@ -166,20 +166,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = getpass.getpass('OpenAI API key:  ')\n",
+    "API_KEY = getpass.getpass(\"OpenAI API key:  \")\n",
     "\n",
     "client.inference.put_model(\n",
     "    task_type=\"text_embedding\",\n",
     "    model_id=\"my_openai_embedding_model\",\n",
     "    body={\n",
     "        \"service\": \"openai\",\n",
-    "        \"service_settings\": {\n",
-    "            \"api_key\": API_KEY\n",
-    "        },\n",
-    "        \"task_settings\": {\n",
-    "            \"model\": \"text-embedding-ada-002\"\n",
-    "        }\n",
-    "    }\n",
+    "        \"service_settings\": {\"api_key\": API_KEY},\n",
+    "        \"task_settings\": {\"model\": \"text-embedding-ada-002\"},\n",
+    "    },\n",
     ")"
    ]
   },
@@ -201,19 +197,19 @@
    "outputs": [],
    "source": [
     "client.ingest.put_pipeline(\n",
-    "    id=\"openai_embeddings_pipeline\", \n",
+    "    id=\"openai_embeddings_pipeline\",\n",
     "    description=\"Ingest pipeline for OpenAI inference.\",\n",
     "    processors=[\n",
-    "    {\n",
-    "      \"inference\": {\n",
-    "        \"model_id\": \"my_openai_embedding_model\",\n",
-    "        \"input_output\": {\n",
-    "              \"input_field\": \"plot\",\n",
-    "              \"output_field\": \"plot_embedding\"\n",
+    "        {\n",
+    "            \"inference\": {\n",
+    "                \"model_id\": \"my_openai_embedding_model\",\n",
+    "                \"input_output\": {\n",
+    "                    \"input_field\": \"plot\",\n",
+    "                    \"output_field\": \"plot_embedding\",\n",
+    "                },\n",
     "            }\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
+    "        }\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -252,24 +248,18 @@
    "source": [
     "client.indices.delete(index=\"openai-movie-embeddings\", ignore_unavailable=True)\n",
     "client.indices.create(\n",
-    "  index=\"openai-movie-embeddings\",\n",
-    "  settings={\n",
-    "      \"index\": {\n",
-    "          \"default_pipeline\": \"openai_embeddings_pipeline\"\n",
-    "      }\n",
-    "  },\n",
-    "  mappings={\n",
-    "    \"properties\": {\n",
-    "      \"plot_embedding\": { \n",
-    "        \"type\": \"dense_vector\", \n",
-    "        \"dims\": 1536, \n",
-    "        \"similarity\": \"dot_product\" \n",
-    "      },\n",
-    "      \"plot\": {\n",
-    "        \"type\": \"text\"\n",
+    "    index=\"openai-movie-embeddings\",\n",
+    "    settings={\"index\": {\"default_pipeline\": \"openai_embeddings_pipeline\"}},\n",
+    "    mappings={\n",
+    "        \"properties\": {\n",
+    "            \"plot_embedding\": {\n",
+    "                \"type\": \"dense_vector\",\n",
+    "                \"dims\": 1536,\n",
+    "                \"similarity\": \"dot_product\",\n",
+    "            },\n",
+    "            \"plot\": {\"type\": \"text\"},\n",
     "        }\n",
-    "      }\n",
-    "    }\n",
+    "    },\n",
     ")"
    ]
   },
@@ -299,10 +289,12 @@
     "# Prepare the documents to be indexed\n",
     "documents = []\n",
     "for doc in data_json:\n",
-    "    documents.append({\n",
-    "        \"_index\": \"openai-movie-embeddings\",\n",
-    "        \"_source\": doc,\n",
-    "    })\n",
+    "    documents.append(\n",
+    "        {\n",
+    "            \"_index\": \"openai-movie-embeddings\",\n",
+    "            \"_source\": doc,\n",
+    "        }\n",
+    "    )\n",
     "\n",
     "# Use helpers.bulk to index\n",
     "helpers.bulk(client, documents)\n",
@@ -348,26 +340,26 @@
    ],
    "source": [
     "response = client.search(\n",
-    "    index='openai-movie-embeddings', \n",
+    "    index=\"openai-movie-embeddings\",\n",
     "    size=3,\n",
     "    knn={\n",
     "        \"field\": \"plot_embedding\",\n",
     "        \"query_vector_builder\": {\n",
     "            \"text_embedding\": {\n",
     "                \"model_id\": \"my_openai_embedding_model\",\n",
-    "                \"model_text\": \"Fighting movie\"\n",
+    "                \"model_text\": \"Fighting movie\",\n",
     "            }\n",
     "        },\n",
     "        \"k\": 10,\n",
-    "        \"num_candidates\": 100\n",
-    "        }\n",
+    "        \"num_candidates\": 100,\n",
+    "    },\n",
     ")\n",
     "\n",
-    "for hit in response['hits']['hits']:\n",
-    "    doc_id = hit['_id']\n",
-    "    score = hit['_score']\n",
-    "    title = hit['_source']['title']\n",
-    "    plot = hit['_source']['plot']\n",
+    "for hit in response[\"hits\"][\"hits\"]:\n",
+    "    doc_id = hit[\"_id\"]\n",
+    "    score = hit[\"_score\"]\n",
+    "    title = hit[\"_source\"][\"title\"]\n",
+    "    plot = hit[\"_source\"][\"plot\"]\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
   }
