--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -739,12 +739,16 @@
     "\n",
     "    # Adding a column to the dataframe for each feature:\n",
     "    for feature_index, feature_name in enumerate(ltr_config.feature_names):\n",
-    "        query_judgements_group[feature_name] = numpy.array([doc_features[doc_id][feature_index] for doc_id in doc_ids])\n",
+    "        query_judgements_group[feature_name] = numpy.array(\n",
+    "            [doc_features[doc_id][feature_index] for doc_id in doc_ids]\n",
+    "        )\n",
     "\n",
     "    return query_judgements_group\n",
     "\n",
     "\n",
-    "judgments_with_features = judgments_df.groupby(\"query_id\", group_keys=False).progress_apply(_extract_query_features)\n",
+    "judgments_with_features = judgments_df.groupby(\n",
+    "    \"query_id\", group_keys=False\n",
+    ").progress_apply(_extract_query_features)\n",
     "\n",
     "judgments_with_features"
    ]
@@ -930,7 +934,9 @@
     "groups = judgments_with_features[\"query_id\"]\n",
     "\n",
     "# Split the dataset in two parts respectively used for training and evaluation of the model.\n",
-    "group_preserving_splitter = GroupShuffleSplit(n_splits=1, train_size=0.7).split(X, y, groups)\n",
+    "group_preserving_splitter = GroupShuffleSplit(n_splits=1, train_size=0.7).split(\n",
+    "    X, y, groups\n",
+    ")\n",
     "train_idx, eval_idx = next(group_preserving_splitter)\n",
     "\n",
     "train_features, eval_features = X.loc[train_idx], X.loc[eval_idx]\n",
@@ -1013,7 +1019,7 @@
    "source": [
     "from eland.ml import MLModel\n",
     "\n",
-    "LEARNING_TO_RANK_MODEL_ID=\"ltr-model-xgboost\"\n",
+    "LEARNING_TO_RANK_MODEL_ID = \"ltr-model-xgboost\"\n",
     "\n",
     "MLModel.import_ltr_model(\n",
     "    es_client=es_client,\n",
@@ -1090,13 +1096,13 @@
     "\n",
     "# First let's display the result when not using the rescorer:\n",
     "search_fields = [\"title\", \"overview\", \"actors\", \"director\", \"tags\", \"characters\"]\n",
-    "bm25_query = { \"multi_match\": { \"query\": query, \"fields\": search_fields } }\n",
+    "bm25_query = {\"multi_match\": {\"query\": query, \"fields\": search_fields}}\n",
     "\n",
     "bm25_search_response = es_client.search(index=MOVIE_INDEX, query=bm25_query)\n",
     "\n",
     "[\n",
     "    (movie[\"_source\"][\"title\"], movie[\"_score\"], movie[\"_id\"])\n",
-    "    for movie in bm25_search_response['hits']['hits']\n",
+    "    for movie in bm25_search_response[\"hits\"][\"hits\"]\n",
     "]"
    ]
   },
@@ -1136,7 +1142,9 @@
     "    \"window_size\": 100,\n",
     "}\n",
     "\n",
-    "rescored_search_response = es_client.search(index=MOVIE_INDEX, query=bm25_query, rescore=ltr_rescorer)\n",
+    "rescored_search_response = es_client.search(\n",
+    "    index=MOVIE_INDEX, query=bm25_query, rescore=ltr_rescorer\n",
+    ")\n",
     "\n",
     "[\n",
     "    (movie[\"_source\"][\"title\"], movie[\"_score\"], movie[\"_id\"])\n",
