--- a/notebooks/search/_nbtest.setup.ipynb
+++ b/notebooks/search/_nbtest.setup.ipynb
@@ -24,7 +24,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)"
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
@@ -38,27 +41,31 @@
     "from urllib.request import urlopen\n",
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "if NBTEST[\"notebook\"] in ['01-keyword-querying-filtering.ipynb', '02-hybrid-search.ipynb', '06-synonyms-api.ipynb']:\n",
+    "if NBTEST[\"notebook\"] in [\n",
+    "    \"01-keyword-querying-filtering.ipynb\",\n",
+    "    \"02-hybrid-search.ipynb\",\n",
+    "    \"06-synonyms-api.ipynb\",\n",
+    "]:\n",
     "    # these tests need book_index to exist ahead of time\n",
     "    client.indices.delete(index=\"book_index\", ignore_unavailable=True)\n",
-    "    \n",
+    "\n",
     "    mappings = {\n",
     "        \"properties\": {\n",
     "            \"title_vector\": {\n",
     "                \"type\": \"dense_vector\",\n",
     "                \"dims\": 384,\n",
     "                \"index\": \"true\",\n",
-    "                \"similarity\": \"cosine\"\n",
+    "                \"similarity\": \"cosine\",\n",
     "            }\n",
     "        }\n",
     "    }\n",
-    "    client.indices.create(index='book_index', mappings=mappings)\n",
+    "    client.indices.create(index=\"book_index\", mappings=mappings)\n",
     "\n",
     "    url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/data.json\"\n",
     "    response = urlopen(url)\n",
     "    books = json.loads(response.read())\n",
     "\n",
-    "    model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "    model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
     "    operations = []\n",
     "    for book in books:\n",
     "        operations.append({\"index\": {\"_index\": \"book_index\"}})\n",
