--- a/supporting-blog-content/Boston-Celtics-Demo/load_data_and_write_queries.ipynb
+++ b/supporting-blog-content/Boston-Celtics-Demo/load_data_and_write_queries.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "nba_teams = teams.get_teams()\n",
-    "celtics = [team for team in nba_teams if team['abbreviation'] == 'BOS'][0]\n",
-    "celtics_id = celtics['id']"
+    "celtics = [team for team in nba_teams if team[\"abbreviation\"] == \"BOS\"][0]\n",
+    "celtics_id = celtics[\"id\"]"
    ]
   },
   {
@@ -1335,7 +1335,9 @@
     }
    ],
    "source": [
-    "current_season = games.loc[(games['GAME_DATE'] >= '2023-10-24') & (games['GAME_DATE'] <= '2024-06-20')]\n",
+    "current_season = games.loc[\n",
+    "    (games[\"GAME_DATE\"] >= \"2023-10-24\") & (games[\"GAME_DATE\"] <= \"2024-06-20\")\n",
+    "]\n",
     "current_season"
    ]
   },
@@ -1418,12 +1420,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timeframe = 'boston_celtics_current_season'\n",
+    "timeframe = \"boston_celtics_current_season\"\n",
+    "\n",
     "\n",
     "def doc_generator(df, timeframe):\n",
     "    for index, document in df.iterrows():\n",
     "        yield {\n",
-    "            \"_index\": timeframe, \n",
+    "            \"_index\": timeframe,\n",
     "            \"_id\": f\"{document['GAME_ID']}\",\n",
     "            \"_source\": document.to_dict(),\n",
     "        }"
@@ -1457,13 +1460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_query = {\n",
-    "    \"query\": {\n",
-    "        \"match\": {\n",
-    "            \"WL\": \"W\"\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
+    "search_query = {\"query\": {\"match\": {\"WL\": \"W\"}}}\n",
     "\n",
     "games_won = es.count(index=\"boston_celtics_current_season\", body=search_query)"
    ]
@@ -1494,15 +1491,9 @@
    "outputs": [],
    "source": [
     "streak_query = {\n",
-    "  \"size\": 1000,  \n",
-    "  \"sort\": [\n",
-    "    {\n",
-    "      \"GAME_DATE\": {\n",
-    "        \"order\": \"asc\"\n",
-    "      }\n",
-    "    }\n",
-    "  ],\n",
-    "  \"_source\": [\"GAME_DATE\", \"WL\"]\n",
+    "    \"size\": 1000,\n",
+    "    \"sort\": [{\"GAME_DATE\": {\"order\": \"asc\"}}],\n",
+    "    \"_source\": [\"GAME_DATE\", \"WL\"],\n",
     "}"
    ]
   },
@@ -1513,9 +1504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streak_search = es.search(\n",
-    "    index=\"boston_celtics_current_season\",\n",
-    "    body=streak_query)"
+    "streak_search = es.search(index=\"boston_celtics_current_season\", body=streak_query)"
    ]
   },
   {
@@ -1525,7 +1514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs = [hit['_source'] for hit in streak_search['hits']['hits']]"
+    "gs = [hit[\"_source\"] for hit in streak_search[\"hits\"][\"hits\"]]"
    ]
   },
   {
@@ -1546,14 +1535,14 @@
     "streaks = []\n",
     "current_streak = 1\n",
     "for i in range(1, len(gs)):\n",
-    "    if gs[i]['WL'] == gs[i-1]['WL']:\n",
+    "    if gs[i][\"WL\"] == gs[i - 1][\"WL\"]:\n",
     "        current_streak += 1\n",
     "    else:\n",
-    "        streaks.append((gs[i-1]['WL'], current_streak))\n",
+    "        streaks.append((gs[i - 1][\"WL\"], current_streak))\n",
     "        current_streak = 1\n",
     "\n",
     "\n",
-    "streaks.append((gs[-1]['WL'], current_streak))\n",
+    "streaks.append((gs[-1][\"WL\"], current_streak))\n",
     "top_streaks = sorted(streaks, key=lambda x: x[1], reverse=True)[:5]\n",
     "print(top_streaks)"
    ]
