--- a/notebooks/document-chunking/tokenization.ipynb
+++ b/notebooks/document-chunking/tokenization.ipynb
@@ -80,8 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bert_tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "e5_tokenizer = AutoTokenizer.from_pretrained('intfloat/multilingual-e5-base')\n",
+    "bert_tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "e5_tokenizer = AutoTokenizer.from_pretrained(\"intfloat/multilingual-e5-base\")\n",
+    "\n",
     "\n",
     "def whitespace_tokenize(text):\n",
     "    return text.split()"
@@ -148,6 +149,7 @@
     "    bert_tokens = len(bert_tokenizer.encode(text))\n",
     "    e5_tokens = len(e5_tokenizer.encode(text))\n",
     "    return [whitespace_tokens, bert_tokens, e5_tokens, f\"{text[:80]}...\"]\n",
+    "\n",
     "\n",
     "counts = [count_tokens(movie[\"plot\"]) for movie in movies]\n",
     "\n",
@@ -219,11 +221,14 @@
     "SEMANTIC_SEARCH_TOKEN_LIMIT = 510  # 512 minus space for the 2 special tokens\n",
     "ELSER_TOKEN_OVERLAP = 0.5  # 50% token overlap between chunks is recommended for ELSER\n",
     "\n",
-    "def chunk(tokens, chunk_size=SEMANTIC_SEARCH_TOKEN_LIMIT, overlap_ratio=ELSER_TOKEN_OVERLAP):\n",
+    "\n",
+    "def chunk(\n",
+    "    tokens, chunk_size=SEMANTIC_SEARCH_TOKEN_LIMIT, overlap_ratio=ELSER_TOKEN_OVERLAP\n",
+    "):\n",
     "    step_size = round(chunk_size * overlap_ratio)\n",
     "\n",
     "    for i in range(0, len(tokens), step_size):\n",
-    "        yield tokens[i:i+chunk_size]"
+    "        yield tokens[i : i + chunk_size]"
    ]
   },
   {
@@ -281,11 +286,10 @@
     }
    ],
    "source": [
-    "tokens = bert_tokenizer.encode(long_text)[1:-1]  # exclude special tokens at the beginning and end\n",
-    "chunked = [\n",
-    "    bert_tokenizer.decode(tokens_chunk)\n",
-    "    for tokens_chunk in chunk(tokens)\n",
-    "]\n",
+    "tokens = bert_tokenizer.encode(long_text)[\n",
+    "    1:-1\n",
+    "]  # exclude special tokens at the beginning and end\n",
+    "chunked = [bert_tokenizer.decode(tokens_chunk) for tokens_chunk in chunk(tokens)]\n",
     "chunked"
    ]
   },
