--- a/notebooks/langchain/_nbtest.setup.langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/_nbtest.setup.langchain-vector-store-using-elser.ipynb
@@ -25,7 +25,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)"
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
@@ -37,46 +40,40 @@
    "source": [
     "# delete model if already downloaded and deployed\n",
     "try:\n",
-    "  client.ml.delete_trained_model(model_id=\".elser_model_2\", force=True)\n",
-    "  print(\"Model deleted successfully, We will proceed with creating one\")\n",
+    "    client.ml.delete_trained_model(model_id=\".elser_model_2\", force=True)\n",
+    "    print(\"Model deleted successfully, We will proceed with creating one\")\n",
     "except exceptions.NotFoundError:\n",
-    "  print(\"Model doesn't exist, but We will proceed with creating one\")\n",
+    "    print(\"Model doesn't exist, but We will proceed with creating one\")\n",
     "\n",
-    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist. \n",
+    "# Creates the ELSER model configuration. Automatically downloads the model if it doesn't exist.\n",
     "client.ml.put_trained_model(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "    input={\n",
-    "      \"field_names\": [\"text_field\"]\n",
-    "    }\n",
-    "  )\n",
+    "    model_id=\".elser_model_2\", input={\"field_names\": [\"text_field\"]}\n",
+    ")\n",
     "\n",
     "while True:\n",
     "    status = client.ml.get_trained_models(\n",
-    "        model_id=\".elser_model_2\",\n",
-    "        include=\"definition_status\"\n",
+    "        model_id=\".elser_model_2\", include=\"definition_status\"\n",
     "    )\n",
-    "    \n",
-    "    if (status[\"trained_model_configs\"][0][\"fully_defined\"]):\n",
+    "\n",
+    "    if status[\"trained_model_configs\"][0][\"fully_defined\"]:\n",
     "        break\n",
     "    time.sleep(5)\n",
     "\n",
     "# Start trained model deployment if not already deployed\n",
     "client.ml.start_trained_model_deployment(\n",
-    "  model_id=\".elser_model_2\",\n",
-    "  number_of_allocations=1,\n",
-    "  wait_for=\"starting\"\n",
+    "    model_id=\".elser_model_2\", number_of_allocations=1, wait_for=\"starting\"\n",
     ")\n",
     "\n",
     "while True:\n",
-    "  status = client.ml.get_trained_models_stats(\n",
-    "    model_id=\".elser_model_2\",\n",
-    "  )\n",
-    "  if (status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\"):\n",
-    "    print(\"ELSER Model has been successfully deployed.\")\n",
-    "    break\n",
-    "  else:\n",
-    "    print(\"ELSER Model is currently being deployed.\")\n",
-    "  time.sleep(5)\n",
+    "    status = client.ml.get_trained_models_stats(\n",
+    "        model_id=\".elser_model_2\",\n",
+    "    )\n",
+    "    if status[\"trained_model_stats\"][0][\"deployment_stats\"][\"state\"] == \"started\":\n",
+    "        print(\"ELSER Model has been successfully deployed.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"ELSER Model is currently being deployed.\")\n",
+    "    time.sleep(5)\n",
     "\n",
     "time.sleep(5)"
    ]
