--- a/notebooks/langchain/_nbtest.teardown.langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/_nbtest.teardown.langchain-vector-store-using-elser.ipynb
@@ -13,7 +13,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)\n",
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")\n",
     "\n",
     "# delete the notebook's index\n",
     "client.indices.delete(index=\"workplace_index\", ignore_unavailable=True)\n",
