--- a/notebooks/search/_nbtest.teardown.ipynb
+++ b/notebooks/search/_nbtest.teardown.ipynb
@@ -33,7 +33,10 @@
     "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID: \")\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
     "\n",
-    "client = Elasticsearch(cloud_id=ELASTIC_CLOUD_ID, api_key=ELASTIC_API_KEY,)"
+    "client = Elasticsearch(\n",
+    "    cloud_id=ELASTIC_CLOUD_ID,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
+    ")"
    ]
   },
   {
